--- a/bs/packages/17.html
+++ b/bs/packages/17.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/w/webkit2gtk/libjavascriptcoregtk-4.0-18_2.48.1-2~deb12u1_amd64.deb">libjavascriptcoregtk-4.0-18</a></td>
               <td>2.48.1-2~deb12u1</td>
               <td>JavaScript engine library from WebKitGTK</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/webkit2gtk/libjavascriptcoregtk-4.1-0_2.48.1-2~deb12u1_amd64.deb">libjavascriptcoregtk-4.1-0</a></td>
               <td>2.48.1-2~deb12u1</td>
               <td>JavaScript engine library from WebKitGTK</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libj/libjaylink/libjaylink0_0.3.1-1_amd64.deb">libjaylink0</a></td>
               <td>0.3.1-1</td>
               <td>library for interacting with J-Link programmers</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jbigkit/libjbig0_2.1-6.1_amd64.deb">libjbig0</a></td>
               <td>2.1-6.1</td>
               <td>JBIGkit libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jbig2dec/libjbig2dec0_0.19-3_amd64.deb">libjbig2dec0</a></td>
               <td>0.19-3</td>
               <td>JBIG2 decoder library - shared libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libj/libjcat/libjcat1_0.1.9-1_amd64.deb">libjcat1</a></td>
               <td>0.1.9-1</td>
               <td>JSON catalog library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jemalloc/libjemalloc2_5.3.0-1_amd64.deb">libjemalloc2</a></td>
               <td>5.3.0-1</td>
               <td>general-purpose scalable concurrent malloc(3) implementation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jimtcl/libjim0.81_0.81+dfsg0-2_amd64.deb">libjim0.81</a></td>
               <td>0.81+dfsg0-2</td>
               <td>small-footprint implementation of Tcl - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libj/libjpeg-turbo/libjpeg62-turbo_2.1.5-2_amd64.deb">libjpeg62-turbo</a></td>
               <td>1:2.1.5-2</td>
               <td>libjpeg-turbo JPEG runtime library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jq/libjq1_1.6-2.1_amd64.deb">libjq1</a></td>
               <td>1.6-2.1</td>
               <td>lightweight and flexible command-line JSON processor - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jquery/libjs-jquery_3.6.1+dfsg+~3.5.14-1_all.deb">libjs-jquery</a></td>
               <td>3.6.1+dfsg+~3.5.14-1</td>
               <td>JavaScript library for dynamic web applications</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/underscore/libjs-underscore_1.13.4~dfsg+~1.11.4-3_all.deb">libjs-underscore</a></td>
               <td>1.13.4~dfsg+~1.11.4-3</td>
               <td>JavaScript's functional programming helper library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/json-c/libjson-c5_0.16-2_amd64.deb">libjson-c5</a></td>
               <td>0.16-2</td>
               <td>JSON manipulation library - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/json-glib/libjson-glib-1.0-0_1.6.6-1_amd64.deb">libjson-glib-1.0-0</a></td>
               <td>1.6.6-1</td>
               <td>GLib JSON manipulation library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/j/json-glib/libjson-glib-1.0-common_1.6.6-1_all.deb">libjson-glib-1.0-common</a></td>
               <td>1.6.6-1</td>
               <td>GLib JSON manipulation library (common files)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jigit/libjte2_1.22-3_amd64.deb">libjte2</a></td>
               <td>1.22-3</td>
               <td>Jigdo Template Export - runtime library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jpeg-xl/libjxl0.7_0.7.0-10_amd64.deb">libjxl0.7</a></td>
               <td>0.7.0-10</td>
               <td>JPEG XL Image Coding System - "JXL" (shared libraries)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jxrlib/libjxr-tools_1.2~git20170615.f752187-5_amd64.deb">libjxr-tools</a></td>
               <td>1.2~git20170615.f752187-5</td>
               <td>JPEG-XR lib - command line apps</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jxrlib/libjxr0_1.2~git20170615.f752187-5_amd64.deb">libjxr0</a></td>
               <td>1.2~git20170615.f752187-5</td>
               <td>JPEG-XR lib - libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krb5/libk5crypto3_1.20.1-2+deb12u3_amd64.deb">libk5crypto3</a></td>
               <td>1.20.1-2+deb12u3</td>
               <td>MIT Kerberos runtime libraries - Crypto Library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kaccounts-integration/libkaccounts2_22.12.3-1_amd64.deb">libkaccounts2</a></td>
               <td>4:22.12.3-1</td>
               <td>System to administer web accounts - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkate/libkate1_0.4.1-11_amd64.deb">libkate1</a></td>
               <td>0.4.1-11</td>
               <td>Codec for karaoke and text encapsulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcolorpicker/libkcolorpicker0_0.2.0-1_amd64.deb">libkcolorpicker0</a></td>
               <td>0.2.0-1</td>
               <td>QToolButton-like widget with color selection popup menu (lib)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdecoration/libkdecorations2-5v5_5.27.5-2_amd64.deb">libkdecorations2-5v5</a></td>
               <td>4:5.27.5-2</td>
               <td>library to create window decorations</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdecoration/libkdecorations2private10_5.27.5-2_amd64.deb">libkdecorations2private10</a></td>
               <td>4:5.27.5-2</td>
               <td>library to create window decorations - private library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdsoap/libkdsoap1_1.9.1+dfsg-5_amd64.deb">libkdsoap1</a></td>
               <td>1.9.1+dfsg-5</td>
               <td>Qt-based client-side and server-side SOAP component - client-side library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/keyutils/libkeyutils1_1.6.3-2_amd64.deb">libkeyutils1</a></td>
               <td>1.6.3-2</td>
               <td>Linux Key Management Utilities (library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kactivities-kf5/libkf5activities5_5.103.0-1_amd64.deb">libkf5activities5</a></td>
               <td>5.103.0-1</td>
               <td>Library to organize the user work in separate activities.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kactivities-stats/libkf5activitiesstats1_5.103.0-1_amd64.deb">libkf5activitiesstats1</a></td>
               <td>5.103.0-1</td>
               <td>usage data collected by the activities system</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi/libkf5akonadiagentbase5_22.12.3-1_amd64.deb">libkf5akonadiagentbase5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi agent base library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/akonadi-calendar/libkf5akonadicalendar-data_22.12.3-1_all.deb">libkf5akonadicalendar-data</a></td>
               <td>4:22.12.3-1</td>
               <td>data files for akonadi-calendar</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-calendar/libkf5akonadicalendar5abi1_22.12.3-1_amd64.deb">libkf5akonadicalendar5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>library providing calendar helpers for Akonadi items</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-contacts/libkf5akonadicontact5_22.12.3-1_amd64.deb">libkf5akonadicontact5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi contacts access library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-notes/libkf5akonadinotes5_22.12.3-1_amd64.deb">libkf5akonadinotes5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi notes access library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearch-bin_22.12.3-1_amd64.deb">libkf5akonadisearch-bin</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search library - runtime binaries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearch-data_22.12.3-1_all.deb">libkf5akonadisearch-data</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search library - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearch-plugins_22.12.3-1_amd64.deb">libkf5akonadisearch-plugins</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search library - runtime plugins</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearchcore5_22.12.3-1_amd64.deb">libkf5akonadisearchcore5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search core library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearchdebug5_22.12.3-1_amd64.deb">libkf5akonadisearchdebug5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search debug library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearchpim5_22.12.3-1_amd64.deb">libkf5akonadisearchpim5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-search/libkf5akonadisearchxapian5_22.12.3-1_amd64.deb">libkf5akonadisearchxapian5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi search xapian library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/karchive/libkf5archive-data_5.103.0-1_all.deb">libkf5archive-data</a></td>
               <td>5.103.0-1</td>
               <td>data files for karchive</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/karchive/libkf5archive5_5.103.0-1_amd64.deb">libkf5archive5</a></td>
               <td>5.103.0-1</td>
               <td>Qt 5 addon providing access to numerous types of archives</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/attica-kf5/libkf5attica5_5.103.0-1_amd64.deb">libkf5attica5</a></td>
               <td>5.103.0-1</td>
               <td>Qt library that implements the Open Collaboration Services API</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kauth/libkf5auth-data_5.103.0-1_all.deb">libkf5auth-data</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system policy and authentication features</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kauth/libkf5auth5_5.103.0-1_amd64.deb">libkf5auth5</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system policy and authentication features</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kauth/libkf5authcore5_5.103.0-1_amd64.deb">libkf5authcore5</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system policy and authentication features</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/baloo-kf5/libkf5baloo5_5.103.0-2_amd64.deb">libkf5baloo5</a></td>
               <td>5.103.0-2</td>
               <td>framework for searching and managing metadata core lib.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/baloo-kf5/libkf5balooengine5_5.103.0-2_amd64.deb">libkf5balooengine5</a></td>
               <td>5.103.0-2</td>
               <td>framework for searching and managing metadata plugins</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/baloo-widgets/libkf5baloowidgets-bin_22.12.3-1_amd64.deb">libkf5baloowidgets-bin</a></td>
               <td>4:22.12.3-1</td>
               <td>Wigets for use with Baloo - binaries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
