--- a/bs/packages/18.html
+++ b/bs/packages/18.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/b/baloo-widgets/libkf5baloowidgets5_22.12.3-1_amd64.deb">libkf5baloowidgets5</a></td>
               <td>4:22.12.3-1</td>
               <td>Wigets for use with Baloo</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bluez-qt/libkf5bluezqt-data_5.103.0-1_all.deb">libkf5bluezqt-data</a></td>
               <td>5.103.0-1</td>
               <td>data files for bluez-qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez-qt/libkf5bluezqt6_5.103.0-1_amd64.deb">libkf5bluezqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper for bluez</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kbookmarks/libkf5bookmarks-data_5.103.0-1_all.deb">libkf5bookmarks-data</a></td>
               <td>5.103.0-1</td>
               <td>Qt library with support for bookmarks and the XBEL format.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kbookmarks/libkf5bookmarks5_5.103.0-1_amd64.deb">libkf5bookmarks5</a></td>
               <td>5.103.0-1</td>
               <td>Qt library with support for bookmarks and the XBEL format.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcalcore/libkf5calendarcore5abi2_5.103.0-1_amd64.deb">libkf5calendarcore5abi2</a></td>
               <td>5:5.103.0-1</td>
               <td>calendar access framework</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/libkf5calendarevents5_5.103.0-1_amd64.deb">libkf5calendarevents5</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks -- calendarevents</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5calendarsupport/libkf5calendarsupport-data_22.12.3-1_all.deb">libkf5calendarsupport-data</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Calendar support - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5calendarsupport/libkf5calendarsupport5abi1_22.12.3-1_amd64.deb">libkf5calendarsupport5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Calendar support - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcalutils/libkf5calendarutils5_22.12.3-1_amd64.deb">libkf5calendarutils5</a></td>
               <td>4:22.12.3-1</td>
               <td>library with utility functions for the handling of calendar data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcodecs/libkf5codecs-data_5.103.0-1_all.deb">libkf5codecs-data</a></td>
               <td>5.103.0-1</td>
               <td>collection of methods to manipulate strings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcodecs/libkf5codecs5_5.103.0-1_amd64.deb">libkf5codecs5</a></td>
               <td>5.103.0-1</td>
               <td>collection of methods to manipulate strings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcompletion/libkf5completion-data_5.103.0-1_all.deb">libkf5completion-data</a></td>
               <td>5.103.0-1</td>
               <td>Widgets with advanced auto-completion features.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcompletion/libkf5completion5_5.103.0-1_amd64.deb">libkf5completion5</a></td>
               <td>5.103.0-1</td>
               <td>Widgets with advanced auto-completion features.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5config-bin_5.103.0-2_amd64.deb">libkf5config-bin</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kconfig/libkf5config-data_5.103.0-2_all.deb">libkf5config-data</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5configcore5_5.103.0-2_amd64.deb">libkf5configcore5</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5configgui5_5.103.0-2_amd64.deb">libkf5configgui5</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5configqml5_5.103.0-2_amd64.deb">libkf5configqml5</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kconfigwidgets/libkf5configwidgets-data_5.103.0-1_all.deb">libkf5configwidgets-data</a></td>
               <td>5.103.0-1</td>
               <td>Extra widgets for easier configuration support.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfigwidgets/libkf5configwidgets5_5.103.0-1_amd64.deb">libkf5configwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Extra widgets for easier configuration support.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-contacts/libkf5contacteditor5_22.12.3-1_amd64.deb">libkf5contacteditor5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi contact editor library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcontacts/libkf5contacts-data_5.103.0-1_all.deb">libkf5contacts-data</a></td>
               <td>5:5.103.0-1</td>
               <td>data files for kcontacts</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcontacts/libkf5contacts5_5.103.0-1_amd64.deb">libkf5contacts5</a></td>
               <td>5:5.103.0-1</td>
               <td>address book API for KDE frameworks</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcoreaddons/libkf5coreaddons-data_5.103.0-1_all.deb">libkf5coreaddons-data</a></td>
               <td>5.103.0-1</td>
               <td>KDE Frameworks 5 addons to QtCore - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcoreaddons/libkf5coreaddons5_5.103.0-1_amd64.deb">libkf5coreaddons5</a></td>
               <td>5.103.0-1</td>
               <td>KDE Frameworks 5 addons to QtCore</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcrash/libkf5crash5_5.103.0-1_amd64.deb">libkf5crash5</a></td>
               <td>5.103.0-1</td>
               <td>Support for application crash analysis and bug report from apps</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdav/libkf5dav-data_5.103.0-1_all.deb">libkf5dav-data</a></td>
               <td>1:5.103.0-1</td>
               <td>DAV protocol implementation with KJobs - arch independent files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdav/libkf5dav5_5.103.0-1_amd64.deb">libkf5dav5</a></td>
               <td>1:5.103.0-1</td>
               <td>DAV protocol implementation with KJobs</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdbusaddons/libkf5dbusaddons-bin_5.103.0-1_amd64.deb">libkf5dbusaddons-bin</a></td>
               <td>5.103.0-1</td>
               <td>class library for qtdbus</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdbusaddons/libkf5dbusaddons-data_5.103.0-1_all.deb">libkf5dbusaddons-data</a></td>
               <td>5.103.0-1</td>
               <td>class library for qtdbus</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdbusaddons/libkf5dbusaddons5_5.103.0-1_amd64.deb">libkf5dbusaddons5</a></td>
               <td>5.103.0-1</td>
               <td>class library for qtdbus</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdeclarative/libkf5declarative-data_5.103.0-1_all.deb">libkf5declarative-data</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/libkf5declarative5_5.103.0-1_amd64.deb">libkf5declarative5</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdnssd-kf5/libkf5dnssd-data_5.103.0-1_all.deb">libkf5dnssd-data</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system DNSSD features.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdnssd-kf5/libkf5dnssd5_5.103.0-1_amd64.deb">libkf5dnssd5</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system DNSSD features.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdoctools/libkf5doctools5_5.103.0-1_amd64.deb">libkf5doctools5</a></td>
               <td>5.103.0-1</td>
               <td>Tools to generate documentation in various formats from DocBook</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5eventviews/libkf5eventviews-data_22.12.3-1_all.deb">libkf5eventviews-data</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM event handling - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5eventviews/libkf5eventviews5abi1_22.12.3-1_amd64.deb">libkf5eventviews5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM event handling - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kfilemetadata-kf5/libkf5filemetadata-bin_5.103.0-1_amd64.deb">libkf5filemetadata-bin</a></td>
               <td>5.103.0-1</td>
               <td>library for extracting file metadata</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kfilemetadata-kf5/libkf5filemetadata-data_5.103.0-1_all.deb">libkf5filemetadata-data</a></td>
               <td>5.103.0-1</td>
               <td>library for extracting file metadata</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kfilemetadata-kf5/libkf5filemetadata3_5.103.0-1_amd64.deb">libkf5filemetadata3</a></td>
               <td>5.103.0-1</td>
               <td>library for extracting file metadata</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccel-bin_5.103.0-1_amd64.deb">libkf5globalaccel-bin</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccel-data_5.103.0-1_all.deb">libkf5globalaccel-data</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccel5_5.103.0-1_amd64.deb">libkf5globalaccel5</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccelprivate5_5.103.0-1_amd64.deb">libkf5globalaccelprivate5</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support - private runtime library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5grantleetheme/libkf5grantleetheme-plugins_22.12.3-1_amd64.deb">libkf5grantleetheme-plugins</a></td>
               <td>22.12.3-1</td>
               <td>KDE PIM grantlee theme support - plugins</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5grantleetheme/libkf5grantleetheme5_22.12.3-1_amd64.deb">libkf5grantleetheme5</a></td>
               <td>22.12.3-1</td>
               <td>KDE PIM grantlee theme support - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5gravatar/libkf5gravatar-data_22.12.3-1_all.deb">libkf5gravatar-data</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM gravatar library - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5gravatar/libkf5gravatar5abi2_22.12.3-1_amd64.deb">libkf5gravatar5abi2</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM gravatar library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
