--- a/bs/packages/50.html
+++ b/bs/packages/50.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,315 +224,315 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/x/xml-core/xml-core_0.18+nmu1_all.deb">xml-core</a></td>
               <td>0.18+nmu1</td>
               <td>XML infrastructure and XML catalog file support</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xorg_7.7+23_amd64.deb">xorg</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X Window System</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg-docs/xorg-docs-core_1.7.1-1.2_all.deb">xorg-docs-core</a></td>
               <td>1:1.7.1-1.2</td>
               <td>Core documentation for the X.org X Window System</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg-sgml-doctools/xorg-sgml-doctools_1.11-1.1_all.deb">xorg-sgml-doctools</a></td>
               <td>1:1.11-1.1</td>
               <td>Common tools for building X.Org SGML documentation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libisoburn/xorriso_1.5.4-4_amd64.deb">xorriso</a></td>
               <td>1.5.4-4</td>
               <td>command line ISO-9660 and Rock Ridge manipulation tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg-server/xserver-common_21.1.7-3+deb12u9_all.deb">xserver-common</a></td>
               <td>2:21.1.7-3+deb12u9</td>
               <td>common files used by various X servers</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xserver-xorg_7.7+23_amd64.deb">xserver-xorg</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg-server/xserver-xorg-core_21.1.7-3+deb12u9_amd64.deb">xserver-xorg-core</a></td>
               <td>2:21.1.7-3+deb12u9</td>
               <td>Xorg X server - core server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xserver-xorg-input-all_7.7+23_amd64.deb">xserver-xorg-input-all</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X server -- input driver metapackage</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-input-libinput/xserver-xorg-input-libinput_1.2.1-1+b1_amd64.deb">xserver-xorg-input-libinput</a></td>
               <td>1.2.1-1+b1</td>
               <td>X.Org X server -- libinput input driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xf86-input-mtrack/xserver-xorg-input-mtrack_0.3.1-1+b4_amd64.deb">xserver-xorg-input-mtrack</a></td>
               <td>0.3.1-1+b4</td>
               <td>Multitouch X input driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-input-mutouch/xserver-xorg-input-mutouch_1.3.0-3_amd64.deb">xserver-xorg-input-mutouch</a></td>
               <td>1:1.3.0-3</td>
               <td>X.Org X server -- muTouch input driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-input-synaptics/xserver-xorg-input-synaptics_1.9.2-1+b1_amd64.deb">xserver-xorg-input-synaptics</a></td>
               <td>1.9.2-1+b1</td>
               <td>Synaptics TouchPad driver for X.Org server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xf86-input-wacom/xserver-xorg-input-wacom_1.1.0-1_amd64.deb">xserver-xorg-input-wacom</a></td>
               <td>1.1.0-1</td>
               <td>X.Org X server -- Wacom input driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg-server/xserver-xorg-legacy_21.1.7-3+deb12u9_amd64.deb">xserver-xorg-legacy</a></td>
               <td>2:21.1.7-3+deb12u9</td>
               <td>setuid root Xorg server wrapper</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xserver-xorg-video-all_7.7+23_amd64.deb">xserver-xorg-video-all</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X server -- output driver metapackage</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-amdgpu/xserver-xorg-video-amdgpu_23.0.0-1_amd64.deb">xserver-xorg-video-amdgpu</a></td>
               <td>23.0.0-1</td>
               <td>X.Org X server -- AMDGPU display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-ati/xserver-xorg-video-ati_19.1.0-3_amd64.deb">xserver-xorg-video-ati</a></td>
               <td>1:19.1.0-3</td>
               <td>X.Org X server -- AMD/ATI display driver wrapper</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-fbdev/xserver-xorg-video-fbdev_0.5.0-2_amd64.deb">xserver-xorg-video-fbdev</a></td>
               <td>1:0.5.0-2</td>
               <td>X.Org X server -- fbdev display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-intel/xserver-xorg-video-intel_2.99.917+git20210115-1_amd64.deb">xserver-xorg-video-intel</a></td>
               <td>2:2.99.917+git20210115-1</td>
               <td>X.Org X server -- Intel i8xx, i9xx display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-nouveau/xserver-xorg-video-nouveau_1.0.17-2_amd64.deb">xserver-xorg-video-nouveau</a></td>
               <td>1:1.0.17-2</td>
               <td>X.Org X server -- Nouveau display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-qxl/xserver-xorg-video-qxl_0.1.5+git20200331-3_amd64.deb">xserver-xorg-video-qxl</a></td>
               <td>0.1.5+git20200331-3</td>
               <td>X.Org X server -- QXL display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-ati/xserver-xorg-video-radeon_19.1.0-3_amd64.deb">xserver-xorg-video-radeon</a></td>
               <td>1:19.1.0-3</td>
               <td>X.Org X server -- AMD/ATI Radeon display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-vesa/xserver-xorg-video-vesa_2.5.0-1+b1_amd64.deb">xserver-xorg-video-vesa</a></td>
               <td>1:2.5.0-1+b1</td>
               <td>X.Org X server -- VESA display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-vmware/xserver-xorg-video-vmware_13.3.0-3.1+b1_amd64.deb">xserver-xorg-video-vmware</a></td>
               <td>1:13.3.0-3.1+b1</td>
               <td>X.Org X server -- VMware display driver</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xsettings-kde/xsettings-kde_0.9-2+b2_amd64.deb">xsettings-kde</a></td>
               <td>0.9-2+b2</td>
               <td>XSettings daemon for KDE</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xsettingsd/xsettingsd_1.0.2-1_amd64.deb">xsettingsd</a></td>
               <td>1.0.2-1</td>
               <td>Provides settings to X11 applications</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xwayland/xwayland_22.1.9-1_amd64.deb">xwayland</a></td>
               <td>2:22.1.9-1</td>
               <td>X server for running X clients under Wayland</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xz-utils/xz-utils_5.4.1-1_amd64.deb">xz-utils</a></td>
               <td>5.4.1-1</td>
               <td>XZ-format compression utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/y/yt-dlp/yt-dlp_2025.03.31-1~bpo12+1_all.deb">yt-dlp</a></td>
               <td>2025.03.31-1~bpo12+1</td>
               <td>downloader of videos from YouTube and other sites</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/y/ytdownloader/ytdownloader_3.18.5_amd64.deb">ytdownloader</a></td>
               <td>3.18.5</td>
               <td></td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/y/ytdownloader-locales/ytdownloader-locales_3.18.5_amd64.deb">ytdownloader-locales</a></td>
               <td>3.18.5</td>
               <td></td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zenity/zenity_3.44.0-1_amd64.deb">zenity</a></td>
               <td>3.44.0-1</td>
               <td>Display graphical dialog boxes from shell scripts</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/z/zenity/zenity-common_3.44.0-1_all.deb">zenity-common</a></td>
               <td>3.44.0-1</td>
               <td>Display graphical dialog boxes from shell scripts (common files)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zerofree/zerofree_1.1.1-1_amd64.deb">zerofree</a></td>
               <td>1.1.1-1</td>
               <td>zero free blocks from ext2, ext3 and ext4 file-systems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zip/zip_3.0-13_amd64.deb">zip</a></td>
               <td>3.0-13</td>
               <td>Archiver for .zip files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zlib/zlib1g_1.2.13.dfsg-1_amd64.deb">zlib1g</a></td>
               <td>1:1.2.13.dfsg-1</td>
               <td>compression library - runtime</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zlib/zlib1g-dev_1.2.13.dfsg-1_amd64.deb">zlib1g-dev</a></td>
               <td>1:1.2.13.dfsg-1</td>
               <td>compression library - development</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libz/libzstd/zstd_1.5.4+dfsg2-5_amd64.deb">zstd</a></td>
               <td>1.5.4+dfsg2-5</td>
               <td>fast lossless compression algorithm -- CLI tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zsync/zsync_0.6.2-5_amd64.deb">zsync</a></td>
               <td>0.6.2-5</td>
               <td>client-side implementation of the rsync algorithm</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulucrypt-cli_6.2.0-1_amd64.deb">zulucrypt-cli</a></td>
               <td>6.2.0-1</td>
               <td>tool for encrypting volumes</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulucrypt-gui_6.2.0-1_amd64.deb">zulucrypt-gui</a></td>
               <td>6.2.0-1</td>
               <td>graphical front end for zulucrypt-cli</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulumount-cli_6.2.0-1_amd64.deb">zulumount-cli</a></td>
               <td>6.2.0-1</td>
               <td>tool that manages encrypted volumes</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulumount-gui_6.2.0-1_amd64.deb">zulumount-gui</a></td>
               <td>6.2.0-1</td>
               <td>graphical front end for zulumount-cli</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulupolkit_6.2.0-1_amd64.deb">zulupolkit</a></td>
               <td>6.2.0-1</td>
               <td>tool to execute privileged operations</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
