--- a/bs/packages/2.html
+++ b/bs/packages/2.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/b/blueman/blueman_2.3.5-2+b1_amd64.deb">blueman</a></td>
               <td>2.3.5-2+b1</td>
               <td>Graphical bluetooth manager</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bluez/bluetooth_5.66-1+deb12u2_all.deb">bluetooth</a></td>
               <td>5.66-1+deb12u2</td>
               <td>Bluetooth support (metapackage)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez/bluez_5.66-1+deb12u2_amd64.deb">bluez</a></td>
               <td>5.66-1+deb12u2</td>
               <td>Bluetooth tools and daemons</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez/bluez-obexd_5.66-1+deb12u2_amd64.deb">bluez-obexd</a></td>
               <td>5.66-1+deb12u2</td>
               <td>bluez obex daemon</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bolt/bolt_0.9.5-1_amd64.deb">bolt</a></td>
               <td>0.9.5-1</td>
               <td>system daemon to manage thunderbolt 3 devices</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/breeze/breeze_5.27.5-3_amd64.deb">breeze</a></td>
               <td>4:5.27.5-3</td>
               <td>Default Plasma theme (Metapackage)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/breeze/breeze-cursor-theme_5.27.5-2_all.deb">breeze-cursor-theme</a></td>
               <td>4:5.27.5-2</td>
               <td>Default Plasma cursor theme</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/breeze-gtk/breeze-gtk-theme_5.27.5-2_amd64.deb">breeze-gtk-theme</a></td>
               <td>5.27.5-2</td>
               <td>GTK theme built to match KDE's Breeze</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/breeze-icons/breeze-icon-theme_5.128_all.deb">breeze-icon-theme</a></td>
               <td>4:5.128</td>
               <td>Default Plasma icon theme</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bsd-mailx/bsd-mailx_8.1.2-0.20220412cvs-1_amd64.deb">bsd-mailx</a></td>
               <td>8.1.2-0.20220412cvs-1</td>
               <td>simple mail user agent</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/bsdextrautils_2.38.1-5+deb12u3_amd64.deb">bsdextrautils</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>extra utilities from 4.4BSD-Lite</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/bsdutils_2.38.1-5+deb12u3_amd64.deb">bsdutils</a></td>
               <td>1:2.38.1-5+deb12u3</td>
               <td>basic utilities from 4.4BSD-Lite</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/btrfs-progs/btrfs-progs_6.12-1~bpo12+1_amd64.deb">btrfs-progs</a></td>
               <td>6.12-1~bpo12+1</td>
               <td>Checksumming Copy on Write Filesystem utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bubblewrap/bubblewrap_0.8.0-2+deb12u1_amd64.deb">bubblewrap</a></td>
               <td>0.8.0-2+deb12u1</td>
               <td>utility for unprivileged chroot and namespace manipulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/build-essential/build-essential_12.9_amd64.deb">build-essential</a></td>
               <td>12.9</td>
               <td>Informational list of build-essential packages</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bup/bup_0.33.7-1~deb12u1_amd64.deb">bup</a></td>
               <td>0.33.7-1~deb12u1</td>
               <td>highly efficient file backup system based on git</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bup/bup-doc_0.33.7-1~deb12u1_all.deb">bup-doc</a></td>
               <td>0.33.7-1~deb12u1</td>
               <td>highly efficient file backup system based on git (documentation)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/busybox/busybox_1.35.0-4+b3_amd64.deb">busybox</a></td>
               <td>1:1.35.0-4+b3</td>
               <td>Tiny utilities for small and embedded systems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bzip2/bzip2_1.0.8-5+b1_amd64.deb">bzip2</a></td>
               <td>1.0.8-5+b1</td>
               <td>high-quality block-sorting file compressor - utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bzip2/bzip2-doc_1.0.8-5_all.deb">bzip2-doc</a></td>
               <td>1.0.8-5</td>
               <td>high-quality block-sorting file compressor - documentation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/ca-certificates/ca-certificates_20230311_all.deb">ca-certificates</a></td>
               <td>20230311</td>
               <td>Common CA certificates</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/ca-certificates-java/ca-certificates-java_20230710~deb12u1_all.deb">ca-certificates-java</a></td>
               <td>20230710~deb12u1</td>
               <td>Common CA certificates (JKS keystore)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/calamares/calamares_2024.05.06_amd64.deb">calamares</a></td>
               <td>2024.05.06</td>
               <td>distribution-independent installer framework</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/calamares-settings-openbosniana/calamares-settings-openbosniana_2024.04.15_all.deb">calamares-settings-openbosniana</a></td>
               <td>2024.04.15</td>
               <td>OpenBosniana OS theme and settings for the Calamares Installer</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/catatonit/catatonit_0.1.7-1+b1_amd64.deb">catatonit</a></td>
               <td>0.1.7-1+b1</td>
               <td>init process for containers</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/catdoc/catdoc_0.95-5_amd64.deb">catdoc</a></td>
               <td>1:0.95-5</td>
               <td>text extractor for MS-Office files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia/celestia_1.7.0~git20241107+62716d8c-1_all.deb">celestia</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia/celestia-common_1.7.0~git20241107+62716d8c-1_all.deb">celestia-common</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>common files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-data_1.7.0~git20241103+c3104d9-1_all.deb">celestia-data</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-gtk_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-gtk</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (Gtk frontend)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-gtk-dbgsym_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-gtk-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-gtk</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt5_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-qt5</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (Qt5 frontend)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt5-dbgsym_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-qt5-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-qt5</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt6_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-qt6</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (Qt6 frontend)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt6-dbgsym_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-qt6-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-qt6</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-sdl_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-sdl</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (SDL frontend)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-sdl-dbgsym_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-sdl-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-sdl</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-textures-hires_1.7.0~git20241103+c3104d9-1_all.deb">celestia-textures-hires</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-textures-hires-openbosniana/celestia-textures-hires-openbosniana_1.0.0_all.deb">celestia-textures-hires-openbosniana</a></td>
               <td>1.0.0</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-textures-lores_1.7.0~git20241103+c3104d9-1_all.deb">celestia-textures-lores</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-textures-medres_1.7.0~git20241103+c3104d9-1_all.deb">celestia-textures-medres</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-tools_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-tools</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (tools)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-tools-dbgsym_1.7.0~git20241107+62716d8c-1_amd64.deb">celestia-tools-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-tools</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/codium/codium_1.95.2.24313_amd64.deb">codium</a></td>
               <td>1.95.2.24313</td>
               <td>Code editing. Redefined.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/console-setup/console-setup_1.221_all.deb">console-setup</a></td>
               <td>1.221</td>
               <td>console font and keymap setup program</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/console-setup/console-setup-linux_1.221_all.deb">console-setup-linux</a></td>
               <td>1.221</td>
               <td>Linux specific part of console-setup</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/golang-github-containernetworking-plugins/containernetworking-plugins_1.1.1+ds1-3+b5_amd64.deb">containernetworking-plugins</a></td>
               <td>1.1.1+ds1-3+b5</td>
               <td>standard networking plugins - binaries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/coreutils/coreutils_9.1-1_amd64.deb">coreutils</a></td>
               <td>9.1-1</td>
               <td>GNU core utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cpio/cpio_2.13+dfsg-7.1_amd64.deb">cpio</a></td>
               <td>2.13+dfsg-7.1</td>
               <td>GNU cpio -- a program to manage archives of files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-defaults/cpp_12.2.0-3_amd64.deb">cpp</a></td>
               <td>4:12.2.0-3</td>
               <td>GNU C preprocessor (cpp)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
