--- a/bs/packages/20.html
+++ b/bs/packages/20.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libk/libkf5mailcommon/libkf5mailcommon5abi2_22.12.3-1_amd64.deb">libkf5mailcommon5abi2</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM email utility library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5mailimporter/libkf5mailimporter5_22.12.3-1_amd64.deb">libkf5mailimporter5</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Mail importer library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5mailimporter/libkf5mailimporterakonadi5_22.12.3-1_amd64.deb">libkf5mailimporterakonadi5</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Mail importer Akonadi library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kmbox/libkf5mbox5_22.12.3-1_amd64.deb">libkf5mbox5</a></td>
               <td>22.12.3-1</td>
               <td>library for handling mbox mailboxes</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messagecomposer5abi1_22.12.3-2~deb12u1_amd64.deb">libkf5messagecomposer5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, composer library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messagecore5abi1_22.12.3-2~deb12u1_amd64.deb">libkf5messagecore5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, core library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messagelist5abi1_22.12.3-2~deb12u1_amd64.deb">libkf5messagelist5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, message list library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messageviewer5abi1_22.12.3-2~deb12u1_amd64.deb">libkf5messageviewer5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, message viewer library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5mimetreeparser5abi1_22.12.3-2~deb12u1_amd64.deb">libkf5mimetreeparser5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM Mime Tree parser library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/modemmanager-qt/libkf5modemmanagerqt6_5.103.0-1_amd64.deb">libkf5modemmanagerqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper library for ModemManager</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/networkmanager-qt/libkf5networkmanagerqt6_5.103.0-1_amd64.deb">libkf5networkmanagerqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper for NetworkManager - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuff-data_5.103.0-1_all.deb">libkf5newstuff-data</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuff5_5.103.0-1_amd64.deb">libkf5newstuff5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuffcore5_5.103.0-1_amd64.deb">libkf5newstuffcore5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuffwidgets5_5.103.0-1_amd64.deb">libkf5newstuffwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knotifications/libkf5notifications-data_5.103.0-1_all.deb">libkf5notifications-data</a></td>
               <td>5.103.0-1</td>
               <td>Framework for desktop notifications</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knotifications/libkf5notifications5_5.103.0-1_amd64.deb">libkf5notifications5</a></td>
               <td>5.103.0-1</td>
               <td>Framework for desktop notifications</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knotifyconfig/libkf5notifyconfig-data_5.103.0-1_all.deb">libkf5notifyconfig-data</a></td>
               <td>5.103.0-1</td>
               <td>Configuration system for KNotify.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knotifyconfig/libkf5notifyconfig5_5.103.0-1_amd64.deb">libkf5notifyconfig5</a></td>
               <td>5.103.0-1</td>
               <td>Configuration system for KNotify.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpackage/libkf5package-data_5.103.0-1_all.deb">libkf5package-data</a></td>
               <td>5.103.0-1</td>
               <td>non-binary asset management framework</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpackage/libkf5package5_5.103.0-1_amd64.deb">libkf5package5</a></td>
               <td>5.103.0-1</td>
               <td>non-binary asset management framework</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kparts/libkf5parts-data_5.103.0-1_all.deb">libkf5parts-data</a></td>
               <td>5.103.0-1</td>
               <td>Document centric plugin system.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kparts/libkf5parts-plugins_5.103.0-1_amd64.deb">libkf5parts-plugins</a></td>
               <td>5.103.0-1</td>
               <td>Document centric plugin system.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kparts/libkf5parts5_5.103.0-1_amd64.deb">libkf5parts5</a></td>
               <td>5.103.0-1</td>
               <td>Document centric plugin system.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpeople/libkf5people-data_5.103.0-1_all.deb">libkf5people-data</a></td>
               <td>5.103.0-1</td>
               <td>data files for kpeople</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/libkf5people5_5.103.0-1_amd64.deb">libkf5people5</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/libkf5peoplebackend5_5.103.0-1_amd64.deb">libkf5peoplebackend5</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/libkf5peoplewidgets5_5.103.0-1_amd64.deb">libkf5peoplewidgets5</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5pimcommon/libkf5pimcommon-data_22.12.3-1_all.deb">libkf5pimcommon-data</a></td>
               <td>4:22.12.3-1</td>
               <td>Common library for KDE PIM - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5pimcommon/libkf5pimcommonakonadi5abi1_22.12.3-1_amd64.deb">libkf5pimcommonakonadi5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>Common library for KDE PIM Akonadi</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-framework/libkf5plasma5_5.103.0-1+deb12u1_amd64.deb">libkf5plasma5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>Plasma Runtime components</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-framework/libkf5plasmaquick5_5.103.0-1+deb12u1_amd64.deb">libkf5plasmaquick5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>Plasma Runtime components</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/prison-kf5/libkf5prison5_5.103.0-1_amd64.deb">libkf5prison5</a></td>
               <td>5.103.0-1</td>
               <td>barcode API for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/prison-kf5/libkf5prisonscanner5_5.103.0-1_amd64.deb">libkf5prisonscanner5</a></td>
               <td>5.103.0-1</td>
               <td>barcode API for Qt - barcode scanner</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpty/libkf5pty-data_5.103.0-1_all.deb">libkf5pty-data</a></td>
               <td>5.103.0-1</td>
               <td>Pty abstraction.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpty/libkf5pty5_5.103.0-1_amd64.deb">libkf5pty5</a></td>
               <td>5.103.0-1</td>
               <td>Pty abstraction.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio-qt/libkf5pulseaudioqt3_1.3-2+b1_amd64.deb">libkf5pulseaudioqt3</a></td>
               <td>1.3-2+b1</td>
               <td>Pulseaudio bindings library for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/purpose/libkf5purpose-bin_5.103.0-1_amd64.deb">libkf5purpose-bin</a></td>
               <td>5.103.0-1</td>
               <td>abstraction to provide and leverage actions of a specific kind, runtime</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/purpose/libkf5purpose5_5.103.0-1_amd64.deb">libkf5purpose5</a></td>
               <td>5.103.0-1</td>
               <td>library for abstractions to get the developer's purposes fulfilled</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/libkf5quickaddons5_5.103.0-1_amd64.deb">libkf5quickaddons5</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks -- quickaddons</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krunner/libkf5runner5_5.103.0-1_amd64.deb">libkf5runner5</a></td>
               <td>5.103.0-1</td>
               <td>Used to write plugins loaded at runtime called "Runners".</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screen-bin_5.27.5-2_amd64.deb">libkf5screen-bin</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - helpers</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screen-data_5.27.5-2_all.deb">libkf5screen-data</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screen8_5.27.5-2_amd64.deb">libkf5screen8</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screendpms8_5.27.5-2_amd64.deb">libkf5screendpms8</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - dpms support library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kservice/libkf5service-bin_5.103.0-1_amd64.deb">libkf5service-bin</a></td>
               <td>5.103.0-1</td>
               <td>Advanced plugin and service introspection</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kservice/libkf5service-data_5.103.0-1_all.deb">libkf5service-data</a></td>
               <td>5.103.0-1</td>
               <td>Advanced plugin and service introspection</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kservice/libkf5service5_5.103.0-1_amd64.deb">libkf5service5</a></td>
               <td>5.103.0-1</td>
               <td>Advanced plugin and service introspection</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/solid/libkf5solid5_5.103.0-1_amd64.deb">libkf5solid5</a></td>
               <td>5.103.0-1</td>
               <td>Qt library to query and control hardware</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/solid/libkf5solid5-data_5.103.0-1_all.deb">libkf5solid5-data</a></td>
               <td>5.103.0-1</td>
               <td>Qt library to query and control hardware</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
