--- a/bs/packages/23.html
+++ b/bs/packages/23.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/x/xz-utils/liblzma5_5.4.1-1_amd64.deb">liblzma5</a></td>
               <td>5.4.1-1</td>
               <td>XZ-format compression library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lzo2/liblzo2-2_2.10-2_amd64.deb">liblzo2-2</a></td>
               <td>2.10-2</td>
               <td>data compression library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmad/libmad0_0.15.1b-10.1+b1_amd64.deb">libmad0</a></td>
               <td>0.15.1b-10.1+b1</td>
               <td>MPEG audio decoder library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/file/libmagic-mgc_5.44-3_amd64.deb">libmagic-mgc</a></td>
               <td>1:5.44-3</td>
               <td>File type determination library using "magic" numbers (compiled magic file)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/file/libmagic1_5.44-3_amd64.deb">libmagic1</a></td>
               <td>1:5.44-3</td>
               <td>Recognize the type of data in a file using "magic" numbers - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmailtools-perl/libmailtools-perl_2.21-2_all.deb">libmailtools-perl</a></td>
               <td>2.21-2</td>
               <td>modules to manipulate email in perl programs</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/malcontent/libmalcontent-0-0_0.11.0-4_amd64.deb">libmalcontent-0-0</a></td>
               <td>0.11.0-4</td>
               <td>library for parental control of applications</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/discount/libmarkdown2_2.2.7-2_amd64.deb">libmarkdown2</a></td>
               <td>2.2.7-2</td>
               <td>implementation of the Markdown markup language in C (library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmatroska/libmatroska7_1.7.1-1_amd64.deb">libmatroska7</a></td>
               <td>1.7.1-1</td>
               <td>extensible open standard audio/video container format (shared library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmaxminddb/libmaxminddb0_1.7.1-1_amd64.deb">libmaxminddb0</a></td>
               <td>1.7.1-1</td>
               <td>IP geolocation database library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mbedtls/libmbedcrypto7_2.28.3-1_amd64.deb">libmbedcrypto7</a></td>
               <td>2.28.3-1</td>
               <td>lightweight crypto and SSL/TLS library - crypto library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mbedtls/libmbedtls14_2.28.3-1_amd64.deb">libmbedtls14</a></td>
               <td>2.28.3-1</td>
               <td>lightweight crypto and SSL/TLS library - tls library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mbedtls/libmbedx509-1_2.28.3-1_amd64.deb">libmbedx509-1</a></td>
               <td>2.28.3-1</td>
               <td>lightweight crypto and SSL/TLS library - x509 certificate library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmbim/libmbim-glib4_1.28.2-1_amd64.deb">libmbim-glib4</a></td>
               <td>1.28.2-1</td>
               <td>Support library to use the MBIM protocol</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmbim/libmbim-proxy_1.28.2-1_amd64.deb">libmbim-proxy</a></td>
               <td>1.28.2-1</td>
               <td>Proxy to communicate with MBIM ports</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmbim/libmbim-utils_1.28.2-1_amd64.deb">libmbim-utils</a></td>
               <td>1.28.2-1</td>
               <td>Utilities to use the MBIM protocol from the command line</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmd/libmd-dev_1.0.4-2_amd64.deb">libmd-dev</a></td>
               <td>1.0.4-2</td>
               <td>message digest functions from BSD systems - development files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmd/libmd0_1.0.4-2_amd64.deb">libmd0</a></td>
               <td>1.0.4-2</td>
               <td>message digest functions from BSD systems - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/md4c/libmd4c0_0.4.8-1_amd64.deb">libmd4c0</a></td>
               <td>0.4.8-1</td>
               <td>Markdown for C</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/metis/libmetis5_5.1.0.dfsg-7_amd64.deb">libmetis5</a></td>
               <td>5.1.0.dfsg-7</td>
               <td>Serial Graph Partitioning and Fill-reducing Matrix Ordering</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-mediasdk/libmfx1_22.5.4-1_amd64.deb">libmfx1</a></td>
               <td>22.5.4-1</td>
               <td>Intel Media SDK -- shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmime-charset-perl/libmime-charset-perl_1.013.1-2_all.deb">libmime-charset-perl</a></td>
               <td>1.013.1-2</td>
               <td>module for MIME character set information</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/minizip/libminizip1_1.1-8+deb12u1_amd64.deb">libminizip1</a></td>
               <td>1.1-8+deb12u1</td>
               <td>compression library - minizip library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mjpegtools/libmjpegutils-2.1-0_2.1.0+debian-7_amd64.deb">libmjpegutils-2.1-0</a></td>
               <td>1:2.1.0+debian-7</td>
               <td>MJPEG capture/editing/replay and MPEG encoding toolset (library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/modemmanager/libmm-glib0_1.20.4-1_amd64.deb">libmm-glib0</a></td>
               <td>1.20.4-1</td>
               <td>D-Bus service for managing modems - shared libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmng/libmng1_1.0.10+dfsg-3.1+b5_amd64.deb">libmng1</a></td>
               <td>1.0.10+dfsg-3.1+b5</td>
               <td>Multiple-image Network Graphics library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmnl/libmnl0_1.0.4-3_amd64.deb">libmnl0</a></td>
               <td>1.0.4-3</td>
               <td>minimalistic Netlink communication library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmodplug/libmodplug1_0.8.9.0-3_amd64.deb">libmodplug1</a></td>
               <td>1:0.8.9.0-3</td>
               <td>shared libraries for mod music based on ModPlug</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libmount1_2.38.1-5+deb12u3_amd64.deb">libmount1</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>device mounting library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lame/libmp3lame0_3.100-6_amd64.deb">libmp3lame0</a></td>
               <td>3.100-6</td>
               <td>MP3 encoding library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpclib3/libmpc3_1.3.1-1_amd64.deb">libmpc3</a></td>
               <td>1.3.1-1</td>
               <td>multiple precision complex floating-point library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmpc/libmpcdec6_0.1~r495-2_amd64.deb">libmpcdec6</a></td>
               <td>2:0.1~r495-2</td>
               <td>MusePack decoder - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpeg2dec/libmpeg2-4_0.5.1-9_amd64.deb">libmpeg2-4</a></td>
               <td>0.5.1-9</td>
               <td>MPEG1 and MPEG2 video decoder library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mjpegtools/libmpeg2encpp-2.1-0_2.1.0+debian-7_amd64.deb">libmpeg2encpp-2.1-0</a></td>
               <td>1:2.1.0+debian-7</td>
               <td>MJPEG capture/editing/replay and MPEG encoding toolset (library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpfr4/libmpfr6_4.2.0-1_amd64.deb">libmpfr6</a></td>
               <td>4.2.0-1</td>
               <td>multiple precision floating-point computation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpg123/libmpg123-0_1.31.2-1+deb12u1_amd64.deb">libmpg123-0</a></td>
               <td>1.31.2-1+deb12u1</td>
               <td>MPEG layer 1/2/3 audio decoder (shared library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mjpegtools/libmplex2-2.1-0_2.1.0+debian-7_amd64.deb">libmplex2-2.1-0</a></td>
               <td>1:2.1.0+debian-7</td>
               <td>MJPEG capture/editing/replay and MPEG encoding toolset (library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmspack/libmspack0_0.11-1_amd64.deb">libmspack0</a></td>
               <td>0.11-1</td>
               <td>library for Microsoft compression formats (shared library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mtdev/libmtdev1_1.1.6-1_amd64.deb">libmtdev1</a></td>
               <td>1.1.6-1</td>
               <td>Multitouch Protocol Translation Library - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmtp/libmtp-common_1.1.20-1_all.deb">libmtp-common</a></td>
               <td>1.1.20-1</td>
               <td>Media Transfer Protocol (MTP) common files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmtp/libmtp-runtime_1.1.20-1_amd64.deb">libmtp-runtime</a></td>
               <td>1.1.20-1</td>
               <td>Media Transfer Protocol (MTP) runtime tools</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmtp/libmtp9_1.1.20-1_amd64.deb">libmtp9</a></td>
               <td>1.1.20-1</td>
               <td>Media Transfer Protocol (MTP) library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmypaint/libmypaint-1.5-1_1.6.0-2_amd64.deb">libmypaint-1.5-1</a></td>
               <td>1.6.0-2</td>
               <td>brush library for mypaint</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmypaint/libmypaint-common_1.6.0-2_all.deb">libmypaint-common</a></td>
               <td>1.6.0-2</td>
               <td>brush library for mypaint - common files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmysofa/libmysofa1_1.3.1~dfsg0-1_amd64.deb">libmysofa1</a></td>
               <td>1.3.1~dfsg0-1</td>
               <td>library to read HRTFs stored in the AES69-2015 SOFA format</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ncurses/libncurses6_6.4-4_amd64.deb">libncurses6</a></td>
               <td>6.4-4</td>
               <td>shared libraries for terminal handling</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ncurses/libncursesw6_6.4-4_amd64.deb">libncursesw6</a></td>
               <td>6.4-4</td>
               <td>shared libraries for terminal handling (wide character support)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libndp/libndp0_1.8-1+deb12u1_amd64.deb">libndp0</a></td>
               <td>1.8-1+deb12u1</td>
               <td>Library for Neighbor Discovery Protocol</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/neon27/libneon27_0.32.5-1_amd64.deb">libneon27</a></td>
               <td>0.32.5-1</td>
               <td>HTTP and WebDAV client library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnet-dbus-perl/libnet-dbus-perl_1.2.0-2_amd64.deb">libnet-dbus-perl</a></td>
               <td>1.2.0-2</td>
               <td>Perl extension for the DBus bindings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
