--- a/bs/packages/26.html
+++ b/bs/packages/26.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/p/poppler/libpoppler-qt5-1_22.12.0-2+b1_amd64.deb">libpoppler-qt5-1</a></td>
               <td>22.12.0-2+b1</td>
               <td>PDF rendering library (Qt 5 based shared library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/poppler/libpoppler126_22.12.0-2+b1_amd64.deb">libpoppler126</a></td>
               <td>22.12.0-2+b1</td>
               <td>PDF rendering library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/popt/libpopt0_1.19+dfsg-1_amd64.deb">libpopt0</a></td>
               <td>1.19+dfsg-1</td>
               <td>lib for parsing cmdline parameters</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/ffmpeg/libpostproc56_5.1.6-0+deb12u1_amd64.deb">libpostproc56</a></td>
               <td>7:5.1.6-0+deb12u1</td>
               <td>FFmpeg library for post processing - runtime files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/libpowerdevilcore2_5.27.5-2_amd64.deb">libpowerdevilcore2</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings ui library.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/libpowerdevilui5_5.27.5-2_amd64.deb">libpowerdevilui5</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings ui library.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/procps/libproc2-0_4.0.2-3_amd64.deb">libproc2-0</a></td>
               <td>2:4.0.2-3</td>
               <td>library for accessing process information from /proc</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libprocesscore9_5.27.5-2_amd64.deb">libprocesscore9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - processcore shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libprocessui9_5.27.5-2_amd64.deb">libprocessui9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - processui shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/protobuf-c/libprotobuf-c1_1.4.1-1+b1_amd64.deb">libprotobuf-c1</a></td>
               <td>1.4.1-1+b1</td>
               <td>Protocol Buffers C shared library (protobuf-c)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/protobuf/libprotobuf-lite32_3.21.12-3_amd64.deb">libprotobuf-lite32</a></td>
               <td>3.21.12-3</td>
               <td>protocol buffers C++ library (lite version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libproxy/libproxy-tools_0.4.18-1.2_amd64.deb">libproxy-tools</a></td>
               <td>0.4.18-1.2</td>
               <td>automatic proxy configuration management library (tools)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libproxy/libproxy1v5_0.4.18-1.2_amd64.deb">libproxy1v5</a></td>
               <td>0.4.18-1.2</td>
               <td>automatic proxy configuration management library (shared)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/oath-toolkit/libpskc0_2.6.7-3.1+deb12u1_amd64.deb">libpskc0</a></td>
               <td>2.6.7-3.1+deb12u1</td>
               <td>OATH Toolkit Libpskc library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpsl/libpsl5_0.21.2-1_amd64.deb">libpsl5</a></td>
               <td>0.21.2-1</td>
               <td>Library for Public Suffix List (shared libraries)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulse-mainloop-glib0_16.1+dfsg1-2+b1_amd64.deb">libpulse-mainloop-glib0</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio client libraries (glib support)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulse0_16.1+dfsg1-2+b1_amd64.deb">libpulse0</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio client libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulsedsp_16.1+dfsg1-2+b1_amd64.deb">libpulsedsp</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio OSS pre-load library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libp/libpwquality/libpwquality-common_1.4.5-1_all.deb">libpwquality-common</a></td>
               <td>1.4.5-1</td>
               <td>library for password quality checking and generation (data files)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpwquality/libpwquality1_1.4.5-1+b1_amd64.deb">libpwquality1</a></td>
               <td>1.4.5-1+b1</td>
               <td>library for password quality checking and generation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/libpython3-dev_3.11.2-1+b1_amd64.deb">libpython3-dev</a></td>
               <td>3.11.2-1+b1</td>
               <td>header files and a static library for Python (default)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/libpython3-stdlib_3.11.2-1+b1_amd64.deb">libpython3-stdlib</a></td>
               <td>3.11.2-1+b1</td>
               <td>interactive high-level object-oriented language (default python3 version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqaccessibilityclient/libqaccessibilityclient-qt5-0_0.4.1-1+b1_amd64.deb">libqaccessibilityclient-qt5-0</a></td>
               <td>0.4.1-1+b1</td>
               <td>helper to make writing accessibility tools easier</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libq/libqalculate/libqalculate-data_4.5.1-1_all.deb">libqalculate-data</a></td>
               <td>4.5.1-1</td>
               <td>Powerful and easy to use desktop calculator - data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqalculate/libqalculate22_4.5.1-1_amd64.deb">libqalculate22</a></td>
               <td>4.5.1-1</td>
               <td>Powerful and easy to use desktop calculator - library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qca2/libqca-qt5-2_2.3.5-2_amd64.deb">libqca-qt5-2</a></td>
               <td>2.3.5-2</td>
               <td>libraries for the Qt Cryptographic Architecture</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qca2/libqca-qt5-2-plugins_2.3.5-2_amd64.deb">libqca-qt5-2-plugins</a></td>
               <td>2.3.5-2</td>
               <td>QCA plugins for libqca2</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-glib5_1.32.2-1_amd64.deb">libqmi-glib5</a></td>
               <td>1.32.2-1</td>
               <td>Support library to use the Qualcomm MSM Interface (QMI) protocol</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-proxy_1.32.2-1_amd64.deb">libqmi-proxy</a></td>
               <td>1.32.2-1</td>
               <td>Proxy to communicate with QMI ports</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-utils_1.32.2-1_amd64.deb">libqmi-utils</a></td>
               <td>1.32.2-1</td>
               <td>Utilities to use the QMI protocol from the command line</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdegraphics-mobipocket/libqmobipocket2_22.12.3-1_amd64.deb">libqmobipocket2</a></td>
               <td>4:22.12.3-1</td>
               <td>library for reading Mobipocket documents</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qrencode/libqrencode4_4.1.1-1_amd64.deb">libqrencode4</a></td>
               <td>4.1.1-1</td>
               <td>QR Code encoding library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqrtr-glib/libqrtr-glib0_1.2.2-1_amd64.deb">libqrtr-glib0</a></td>
               <td>1.2.2-1</td>
               <td>Support library to use the QRTR protocol</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libquadmath0_12.2.0-14+deb12u1_amd64.deb">libquadmath0</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>GCC Quad-Precision Math Library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librabbitmq/librabbitmq4_0.11.0-1+deb12u1_amd64.deb">librabbitmq4</a></td>
               <td>0.11.0-1+deb12u1</td>
               <td>AMQP client library written in C</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/raptor2/libraptor2-0_2.0.15-4_amd64.deb">libraptor2-0</a></td>
               <td>2.0.15-4</td>
               <td>Raptor 2 RDF syntax library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rust-rav1e/librav1e0_0.5.1-6_amd64.deb">librav1e0</a></td>
               <td>0.5.1-6</td>
               <td>Fastest and safest AV1 encoder - shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libraw1394/libraw1394-11_2.1.2-2_amd64.deb">libraw1394-11</a></td>
               <td>2.1.2-2</td>
               <td>library for direct access to IEEE 1394 bus (aka FireWire)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libraw/libraw20_0.20.2-2.1_amd64.deb">libraw20</a></td>
               <td>0.20.2-2.1</td>
               <td>raw image decoder library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/re2/libre2-9_20220601+dfsg-1+b1_amd64.deb">libre2-9</a></td>
               <td>20220601+dfsg-1+b1</td>
               <td>efficient, principled regular expression library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/readline/libreadline8_8.2-1.3_amd64.deb">libreadline8</a></td>
               <td>8.2-1.3</td>
               <td>GNU readline and history libraries, run-time libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libr/libregexp-ipv6-perl/libregexp-ipv6-perl_0.03-3_all.deb">libregexp-ipv6-perl</a></td>
               <td>0.03-3</td>
               <td>Regular expression for IPv6 addresses</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/reiserfsprogs/libreiserfscore0_3.6.27-8~bpo12+1_amd64.deb">libreiserfscore0</a></td>
               <td>1:3.6.27-8~bpo12+1</td>
               <td>ReiserFS core library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sidplay-libs/libresid-builder0c2a_2.1.1-15+b1_amd64.deb">libresid-builder0c2a</a></td>
               <td>2.1.1-15+b1</td>
               <td>SID chip emulation class based on resid</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librist/librist4_0.2.7+dfsg-1_amd64.deb">librist4</a></td>
               <td>0.2.7+dfsg-1</td>
               <td>Reliable Internet Stream Transport -- shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/librsvg2-2_2.54.7+dfsg-1~deb12u1_amd64.deb">librsvg2-2</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>SAX-based renderer library for SVG files (runtime)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/librsvg2-bin_2.54.7+dfsg-1~deb12u1_amd64.deb">librsvg2-bin</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>command-line utility to convert SVG files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/librsvg2-common_2.54.7+dfsg-1~deb12u1_amd64.deb">librsvg2-common</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>SAX-based renderer library for SVG files (extra runtime)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rtmpdump/librtmp1_2.4+20151223.gitfa8646d.1-2+b2_amd64.deb">librtmp1</a></td>
               <td>2.4+20151223.gitfa8646d.1-2+b2</td>
               <td>toolkit for RTMP streams (shared library)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rubberband/librubberband2_3.1.2+dfsg0-1_amd64.deb">librubberband2</a></td>
               <td>3.1.2+dfsg0-1</td>
               <td>audio time-stretching and pitch-shifting library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
