--- a/bs/packages/27.html
+++ b/bs/packages/27.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libs/libsamplerate/libsamplerate0_0.2.2-3_amd64.deb">libsamplerate0</a></td>
               <td>0.2.2-3</td>
               <td>Audio sample rate conversion library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cyrus-sasl2/libsasl2-2_2.1.28+dfsg-10_amd64.deb">libsasl2-2</a></td>
               <td>2.1.28+dfsg-10</td>
               <td>Cyrus SASL - authentication abstraction library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cyrus-sasl2/libsasl2-modules_2.1.28+dfsg-10_amd64.deb">libsasl2-modules</a></td>
               <td>2.1.28+dfsg-10</td>
               <td>Cyrus SASL - pluggable authentication modules</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cyrus-sasl2/libsasl2-modules-db_2.1.28+dfsg-10_amd64.deb">libsasl2-modules-db</a></td>
               <td>2.1.28+dfsg-10</td>
               <td>Cyrus SASL - pluggable authentication modules (DB)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkgapi/libsasl2-modules-kdexoauth2_22.12.3-1_amd64.deb">libsasl2-modules-kdexoauth2</a></td>
               <td>22.12.3-1</td>
               <td>library to integrate with Cyrus SASL</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sbc/libsbc1_2.0-1_amd64.deb">libsbc1</a></td>
               <td>2.0-1</td>
               <td>Sub Band CODEC library - runtime</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/scim/libscim8v5_1.4.18+git20211204-0.1_amd64.deb">libscim8v5</a></td>
               <td>1.4.18+git20211204-0.1</td>
               <td>library for SCIM platform</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sdl-image1.2/libsdl-image1.2_1.2.12-13+b2_amd64.deb">libsdl-image1.2</a></td>
               <td>1.2.12-13+b2</td>
               <td>Image loading library for Simple DirectMedia Layer 1.2, libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsdl1.2/libsdl1.2debian_1.2.15+dfsg2-8_amd64.deb">libsdl1.2debian</a></td>
               <td>1.2.15+dfsg2-8</td>
               <td>Simple DirectMedia Layer</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsdl2/libsdl2-2.0-0_2.26.5+dfsg-1_amd64.deb">libsdl2-2.0-0</a></td>
               <td>2.26.5+dfsg-1</td>
               <td>Simple DirectMedia Layer</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libseccomp/libseccomp2_2.5.4-1+deb12u1_amd64.deb">libseccomp2</a></td>
               <td>2.5.4-1+deb12u1</td>
               <td>high level interface to Linux seccomp filter</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsecret/libsecret-1-0_0.20.5-3_amd64.deb">libsecret-1-0</a></td>
               <td>0.20.5-3</td>
               <td>Secret store</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libs/libsecret/libsecret-common_0.20.5-3_all.deb">libsecret-common</a></td>
               <td>0.20.5-3</td>
               <td>Secret store (common files)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libselinux/libselinux1_3.4-1+b6_amd64.deb">libselinux1</a></td>
               <td>3.4-1+b6</td>
               <td>SELinux runtime shared libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libs/libsemanage/libsemanage-common_3.4-1_all.deb">libsemanage-common</a></td>
               <td>3.4-1</td>
               <td>Common files for SELinux policy management libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsemanage/libsemanage2_3.4-1+b5_amd64.deb">libsemanage2</a></td>
               <td>3.4-1+b5</td>
               <td>SELinux policy management library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lm-sensors/libsensors-config_3.6.0-7.1_all.deb">libsensors-config</a></td>
               <td>1:3.6.0-7.1</td>
               <td>lm-sensors configuration files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lm-sensors/libsensors5_3.6.0-7.1_amd64.deb">libsensors5</a></td>
               <td>1:3.6.0-7.1</td>
               <td>library to read temperature/voltage/fan sensors</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsepol/libsepol2_3.4-2.1_amd64.deb">libsepol2</a></td>
               <td>3.4-2.1</td>
               <td>SELinux library for manipulating binary security policies</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/serd/libserd-0-0_0.30.16-1_amd64.deb">libserd-0-0</a></td>
               <td>0.30.16-1</td>
               <td>lightweight RDF syntax library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libw/libwebp/libsharpyuv0_1.4.0-0.1~bpo12+1_amd64.deb">libsharpyuv0</a></td>
               <td>1.4.0-0.1~bpo12+1</td>
               <td>Library for sharp RGB to YUV conversion</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shine/libshine3_3.1.1-2_amd64.deb">libshine3</a></td>
               <td>3.1.1-2</td>
               <td>Fixed-point MP3 encoding library - runtime files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libshout/libshout3_2.4.6-1+b1_amd64.deb">libshout3</a></td>
               <td>2.4.6-1+b1</td>
               <td>MP3/Ogg Vorbis broadcast streaming library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sidplay-libs/libsidplay2_2.1.1-15+b1_amd64.deb">libsidplay2</a></td>
               <td>2.1.1-15+b1</td>
               <td>SID (MOS 6581) emulation library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsigc++-2.0/libsigc++-2.0-0v5_2.12.0-1_amd64.deb">libsigc++-2.0-0v5</a></td>
               <td>2.12.0-1</td>
               <td>type-safe Signal Framework for C++ - runtime</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/signond/libsignon-plugins-common1_8.61-1_amd64.deb">libsignon-plugins-common1</a></td>
               <td>8.61-1</td>
               <td>Single Sign On framework - plugins common shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/signond/libsignon-qt5-1_8.61-1_amd64.deb">libsignon-qt5-1</a></td>
               <td>8.61-1</td>
               <td>Single Sign On framework - qt5 shared libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/slang2/libslang2_2.3.3-3_amd64.deb">libslang2</a></td>
               <td>2.3.3-3</td>
               <td>S-Lang programming library - runtime version</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsm/libsm6_1.2.3-1_amd64.deb">libsm6</a></td>
               <td>2:1.2.3-1</td>
               <td>X11 Session Management library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libsmartcols1_2.38.1-5+deb12u3_amd64.deb">libsmartcols1</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>smart column output alignment library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsmbios/libsmbios-c2_2.4.3-1_amd64.deb">libsmbios-c2</a></td>
               <td>2.4.3-1</td>
               <td>Provide access to (SM)BIOS information -- dynamic library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/snappy/libsnappy1v5_1.1.9-3_amd64.deb">libsnappy1v5</a></td>
               <td>1.1.9-3</td>
               <td>fast compression/decompression library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsndfile/libsndfile1_1.2.0-1_amd64.deb">libsndfile1</a></td>
               <td>1.2.0-1</td>
               <td>Library for reading/writing audio files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sndio/libsndio7.0_1.9.0-0.3+b2_amd64.deb">libsndio7.0</a></td>
               <td>1.9.0-0.3+b2</td>
               <td>Small audio and MIDI framework from OpenBSD, runtime libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsodium/libsodium23_1.0.18-1_amd64.deb">libsodium23</a></td>
               <td>1.0.18-1</td>
               <td>Network communication, cryptography and signaturing library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sombok/libsombok3_2.4.0-2+b1_amd64.deb">libsombok3</a></td>
               <td>2.4.0-2+b1</td>
               <td>Unicode Text Segmentation library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonic/libsonic0_0.2.0-12_amd64.deb">libsonic0</a></td>
               <td>0.2.0-12</td>
               <td>Simple library to speed up or slow down speech</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sord/libsord-0-0_0.16.14+git221008-1_amd64.deb">libsord-0-0</a></td>
               <td>0.16.14+git221008-1</td>
               <td>library for storing RDF data in memory</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/soundtouch/libsoundtouch1_2.3.2+ds1-1_amd64.deb">libsoundtouch1</a></td>
               <td>2.3.2+ds1-1</td>
               <td>Sound stretching library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsoup3/libsoup-3.0-0_3.2.2-2_amd64.deb">libsoup-3.0-0</a></td>
               <td>3.2.2-2</td>
               <td>HTTP library implementation in C -- Shared library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libs/libsoup3/libsoup-3.0-common_3.2.2-2_all.deb">libsoup-3.0-common</a></td>
               <td>3.2.2-2</td>
               <td>HTTP library implementation in C -- Common files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsoxr/libsoxr0_0.1.3-4_amd64.deb">libsoxr0</a></td>
               <td>0.1.3-4</td>
               <td>High quality 1D sample-rate conversion library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/spandsp/libspandsp2_0.0.6+dfsg-2+b1_amd64.deb">libspandsp2</a></td>
               <td>0.0.6+dfsg-2+b1</td>
               <td>Telephony signal processing library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libspatialaudio/libspatialaudio0_0.3.0+git20180730+dfsg1-2+b1_amd64.deb">libspatialaudio0</a></td>
               <td>0.3.0+git20180730+dfsg1-2+b1</td>
               <td>library for ambisonic encoding and decoding (runtime files)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/spdlog/libspdlog1.10_1.10.0+ds-0.4_amd64.deb">libspdlog1.10</a></td>
               <td>1:1.10.0+ds-0.4</td>
               <td>Very fast C++ logging library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libspectre/libspectre1_0.2.12-1_amd64.deb">libspectre1</a></td>
               <td>0.2.12-1</td>
               <td>Library for rendering PostScript documents</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speech-dispatcher/libspeechd-module0_0.12.0-3~bpo12+1_amd64.deb">libspeechd-module0</a></td>
               <td>0.12.0-3~bpo12+1</td>
               <td>Speech Dispatcher: Shared libraries for modules</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speech-dispatcher/libspeechd2_0.12.0-3~bpo12+1_amd64.deb">libspeechd2</a></td>
               <td>0.12.0-3~bpo12+1</td>
               <td>Speech Dispatcher: Shared libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speex/libspeex1_1.2.1-2_amd64.deb">libspeex1</a></td>
               <td>1.2.1-2</td>
               <td>The Speex codec runtime library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speexdsp/libspeexdsp1_1.2.1-1_amd64.deb">libspeexdsp1</a></td>
               <td>1.2.1-1</td>
               <td>DSP library derived from speex</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
