--- a/bs/packages/42.html
+++ b/bs/packages/42.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/o/openbosniana-kernel-bootfiles-unsigned/openbosniana-kernel-bootfiles-unsigned_2025.05.14_all.deb">openbosniana-kernel-bootfiles-unsigned</a></td>
               <td>2025.05.14</td>
               <td>Linux 6.12 for 64-bit PCs</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-menu/openbosniana-menu_2024.11.13_amd64.deb">openbosniana-menu</a></td>
               <td>2024.11.13</td>
               <td>OpenBosniana GNU/Linux custom menu</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-meta-base_2024.09.06_all.deb">openbosniana-meta-base</a></td>
               <td>2024.09.06</td>
               <td>OpenBosniana OS base apps</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-meta-hardware_2024.09.06_all.deb">openbosniana-meta-hardware</a></td>
               <td>2024.09.06</td>
               <td>OpenBosniana OS meta</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-virtual-keyboard/openbosniana-virtual-keyboard_2024.01.30_amd64.deb">openbosniana-virtual-keyboard</a></td>
               <td>2024.01.30</td>
               <td>OpenBosniana OS Virtual keyboard</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-welcome/openbosniana-welcome_2024.11.13_amd64.deb">openbosniana-welcome</a></td>
               <td>2024.11.13</td>
               <td>OpenBosniana Welcome Application</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-welcome/openbosniana-welcome-dbgsym_2024.11.13_amd64.deb">openbosniana-welcome-dbgsym</a></td>
               <td>2024.11.13</td>
               <td>debug symbols for openbosniana-welcome</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openjdk-17/openjdk-17-jdk_17.0.14+7-1~deb12u1_amd64.deb">openjdk-17-jdk</a></td>
               <td>17.0.14+7-1~deb12u1</td>
               <td>OpenJDK Development Kit (JDK)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openjdk-17/openjdk-17-jdk-headless_17.0.14+7-1~deb12u1_amd64.deb">openjdk-17-jdk-headless</a></td>
               <td>17.0.14+7-1~deb12u1</td>
               <td>OpenJDK Development Kit (JDK) (headless)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openjdk-17/openjdk-17-jre_17.0.14+7-1~deb12u1_amd64.deb">openjdk-17-jre</a></td>
               <td>17.0.14+7-1~deb12u1</td>
               <td>OpenJDK Java runtime, using Hotspot JIT</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openjdk-17/openjdk-17-jre-headless_17.0.14+7-1~deb12u1_amd64.deb">openjdk-17-jre-headless</a></td>
               <td>17.0.14+7-1~deb12u1</td>
               <td>OpenJDK Java runtime, using Hotspot JIT (headless)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openssh/openssh-client_9.2p1-2+deb12u5_amd64.deb">openssh-client</a></td>
               <td>1:9.2p1-2+deb12u5</td>
               <td>secure shell (SSH) client, for secure access to remote machines</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openssl/openssl_3.0.15-1~deb12u1_amd64.deb">openssl</a></td>
               <td>3.0.15-1~deb12u1</td>
               <td>Secure Sockets Layer toolkit - cryptographic utility</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/os-prober/os-prober_1.81_amd64.deb">os-prober</a></td>
               <td>1.81</td>
               <td>utility to detect other OSes on a set of drives</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/oxygen-sounds/oxygen-sounds_5.27.5-2_all.deb">oxygen-sounds</a></td>
               <td>4:5.27.5-2</td>
               <td>Sounds for the Oxygen desktop theme</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/p11-kit/p11-kit_0.24.1-2_amd64.deb">p11-kit</a></td>
               <td>0.24.1-2</td>
               <td>p11-glue utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/p11-kit/p11-kit-modules_0.24.1-2_amd64.deb">p11-kit-modules</a></td>
               <td>0.24.1-2</td>
               <td>p11-glue proxy and trust modules</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/p7zip/p7zip_16.02+dfsg-8_amd64.deb">p7zip</a></td>
               <td>16.02+dfsg-8</td>
               <td>7zr file archiver with high compression ratio</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/p7zip/p7zip-full_16.02+dfsg-8_amd64.deb">p7zip-full</a></td>
               <td>16.02+dfsg-8</td>
               <td>7z and 7za file archivers with high compression ratio</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/packagekit/packagekit_1.2.6-5_amd64.deb">packagekit</a></td>
               <td>1.2.6-5</td>
               <td>Provides a package management service</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/packagekit/packagekit-tools_1.2.6-5_amd64.deb">packagekit-tools</a></td>
               <td>1.2.6-5</td>
               <td>Provides PackageKit command-line tools</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/par2cmdline/par2_0.8.1-3_amd64.deb">par2</a></td>
               <td>0.8.1-3</td>
               <td>PAR 2.0 compatible file verification and repair tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/parted/parted_3.5-3_amd64.deb">parted</a></td>
               <td>3.5-3</td>
               <td>disk partition manipulator</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/partitionmanager/partitionmanager_22.12.3-1_amd64.deb">partitionmanager</a></td>
               <td>22.12.3-1</td>
               <td>file, disk and partition management for KDE</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shadow/passwd_4.13+dfsg1-1+b1_amd64.deb">passwd</a></td>
               <td>1:4.13+dfsg1-1+b1</td>
               <td>change and administer password and group data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/patch/patch_2.7.6-7_amd64.deb">patch</a></td>
               <td>2.7.6-7</td>
               <td>Apply a diff file to an original</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/patchutils/patchutils_0.4.2-1_amd64.deb">patchutils</a></td>
               <td>0.4.2-1</td>
               <td>Utilities to work with patches</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pci.ids/pci.ids_0.0~2023.04.11-1_all.deb">pci.ids</a></td>
               <td>0.0~2023.04.11-1</td>
               <td>PCI ID Repository</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pciutils/pciutils_3.9.0-4_amd64.deb">pciutils</a></td>
               <td>1:3.9.0-4</td>
               <td>PCI utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/perl/perl_5.36.0-7+deb12u2_amd64.deb">perl</a></td>
               <td>5.36.0-7+deb12u2</td>
               <td>Larry Wall's Practical Extraction and Report Language</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/perl/perl-base_5.36.0-7+deb12u2_amd64.deb">perl-base</a></td>
               <td>5.36.0-7+deb12u2</td>
               <td>minimal Perl system</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/perl/perl-modules-5.36_5.36.0-7+deb12u2_all.deb">perl-modules-5.36</a></td>
               <td>5.36.0-7+deb12u2</td>
               <td>Core Perl modules</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/perl-openssl-defaults/perl-openssl-defaults_7+b1_amd64.deb">perl-openssl-defaults</a></td>
               <td>7+b1</td>
               <td>version compatibility baseline for Perl OpenSSL packages</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/perl-tk/perl-tk_804.036-1+b2_amd64.deb">perl-tk</a></td>
               <td>1:804.036-1+b2</td>
               <td>Perl module providing the Tk graphics library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/phonon/phonon4qt5_4.11.1-4_amd64.deb">phonon4qt5</a></td>
               <td>4:4.11.1-4</td>
               <td>multimedia framework from KDE using Qt 5 - metapackage</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/phonon-backend-vlc/phonon4qt5-backend-vlc_0.11.3-1_amd64.deb">phonon4qt5-backend-vlc</a></td>
               <td>0.11.3-1</td>
               <td>Phonon4Qt5 VLC backend</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pinentry/pinentry-curses_1.2.1-1_amd64.deb">pinentry-curses</a></td>
               <td>1.2.1-1</td>
               <td>curses-based PIN or pass-phrase entry dialog for GnuPG</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pinentry/pinentry-gnome3_1.2.1-1_amd64.deb">pinentry-gnome3</a></td>
               <td>1.2.1-1</td>
               <td>GNOME 3 PIN or pass-phrase entry dialog for GnuPG</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/pkexec_122-3_amd64.deb">pkexec</a></td>
               <td>122-3</td>
               <td>run commands as another user with polkit authorization</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pkgconf/pkg-config_1.8.1-1_amd64.deb">pkg-config</a></td>
               <td>1.8.1-1</td>
               <td>manage compile and link flags for libraries (transitional package)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pkgconf/pkgconf_1.8.1-1_amd64.deb">pkgconf</a></td>
               <td>1.8.1-1</td>
               <td>manage compile and link flags for libraries</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pkgconf/pkgconf-bin_1.8.1-1_amd64.deb">pkgconf-bin</a></td>
               <td>1.8.1-1</td>
               <td>manage compile and link flags for libraries (binaries)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-browser-integration/plasma-browser-integration_5.27.5-2_amd64.deb">plasma-browser-integration</a></td>
               <td>5.27.5-2</td>
               <td>Chromium, Google Chrome, Firefox integration for Plasma</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-desktop/plasma-desktop_5.27.5-2_amd64.deb">plasma-desktop</a></td>
               <td>4:5.27.5-2</td>
               <td>Tools and widgets for the desktop</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/plasma-desktop/plasma-desktop-data_5.27.5-2_all.deb">plasma-desktop-data</a></td>
               <td>4:5.27.5-2</td>
               <td>Tools and widgets for the desktop data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-discover/plasma-discover_5.27.5-2_amd64.deb">plasma-discover</a></td>
               <td>5.27.5-2</td>
               <td>Discover software management suite</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-discover/plasma-discover-backend-fwupd_5.27.5-2_amd64.deb">plasma-discover-backend-fwupd</a></td>
               <td>5.27.5-2</td>
               <td>Discover software management suite - fwupd backend</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/plasma-discover/plasma-discover-common_5.27.5-2_all.deb">plasma-discover-common</a></td>
               <td>5.27.5-2</td>
               <td>Discover software manager suite (common data files)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-disks/plasma-disks_5.27.5-2_amd64.deb">plasma-disks</a></td>
               <td>5.27.5-2</td>
               <td>Monitor S.M.A.R.T. capable devices for imminent failure in Plasma</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-framework/plasma-framework_5.103.0-1+deb12u1_amd64.deb">plasma-framework</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>Plasma Runtime components</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
