--- a/bs/packages/43.html
+++ b/bs/packages/43.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/p/plasma-integration/plasma-integration_5.27.5-2_amd64.deb">plasma-integration</a></td>
               <td>5.27.5-2</td>
               <td>Qt Platform Theme integration plugins for KDE Plasma</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-nm/plasma-nm_5.27.5-2_amd64.deb">plasma-nm</a></td>
               <td>4:5.27.5-2</td>
               <td>Plasma network connections management</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-pa/plasma-pa_5.27.5-2_amd64.deb">plasma-pa</a></td>
               <td>4:5.27.5-2</td>
               <td>Plasma 5 Volume controller</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-thunderbolt/plasma-thunderbolt_5.27.5-2_amd64.deb">plasma-thunderbolt</a></td>
               <td>5.27.5-2</td>
               <td>Plasma addons for managing Thunderbolt devices</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-vault/plasma-vault_5.27.5-2_amd64.deb">plasma-vault</a></td>
               <td>5.27.5-2</td>
               <td>Plasma applet and services for creating encrypted vaults</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-wayland-protocols/plasma-wayland-protocols_1.10.0-1_amd64.deb">plasma-wayland-protocols</a></td>
               <td>1.10.0-1</td>
               <td>Wayland protocols for Plasma</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/plasma-workspace_5.27.5-2+deb12u2_amd64.deb">plasma-workspace</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Plasma Workspace for KF5</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/plasma-workspace/plasma-workspace-data_5.27.5-2+deb12u2_all.deb">plasma-workspace-data</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Plasma Workspace for KF5 - data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/plasma-workspace-wayland_5.27.5-2+deb12u2_amd64.deb">plasma-workspace-wayland</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Plasma Workspace for KF5 - Wayland integration</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plymouth/plymouth_22.02.122-3_amd64.deb">plymouth</a></td>
               <td>22.02.122-3</td>
               <td>boot animation, logger and I/O multiplexer</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plymouth/plymouth-label_22.02.122-3_amd64.deb">plymouth-label</a></td>
               <td>22.02.122-3</td>
               <td>boot animation, logger and I/O multiplexer - label control</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plymouth/plymouth-themes_22.02.122-3_amd64.deb">plymouth-themes</a></td>
               <td>22.02.122-3</td>
               <td>boot animation, logger and I/O multiplexer - themes</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plzip/plzip_1.10-5_amd64.deb">plzip</a></td>
               <td>1.10-5</td>
               <td>parallel, lossless data compressor based on the LZMA algorithm</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pocketsphinx/pocketsphinx-en-us_0.8+5prealpha+1-15_all.deb">pocketsphinx-en-us</a></td>
               <td>0.8+5prealpha+1-15</td>
               <td>Speech recognition tool - US English language model</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/policykit-1_122-3_amd64.deb">policykit-1</a></td>
               <td>122-3</td>
               <td>transitional package for polkitd and pkexec</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/polkit-kde-agent-1/polkit-kde-agent-1_5.27.5-2_amd64.deb">polkit-kde-agent-1</a></td>
               <td>4:5.27.5-2</td>
               <td>KDE dialogs for PolicyKit</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/polkitd_122-3_amd64.deb">polkitd</a></td>
               <td>122-3</td>
               <td>framework for managing administrative policies and privileges</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/polkitd-pkla_122-3_amd64.deb">polkitd-pkla</a></td>
               <td>122-3</td>
               <td>Legacy "local authority" (.pkla) backend for polkitd</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/poppler-data/poppler-data_0.4.12-1_all.deb">poppler-data</a></td>
               <td>0.4.12-1</td>
               <td>encoding data for the poppler PDF rendering library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/powerdevil_5.27.5-2_amd64.deb">powerdevil</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/powerdevil/powerdevil-data_5.27.5-2_all.deb">powerdevil-data</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings data files.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/ppp/ppp_2.4.9-1+1.1+b1_amd64.deb">ppp</a></td>
               <td>2.4.9-1+1.1+b1</td>
               <td>Point-to-Point Protocol (PPP) - daemon</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/print-manager/print-manager_22.12.3-1_amd64.deb">print-manager</a></td>
               <td>4:22.12.3-1</td>
               <td>printer configuration and monitoring tools</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/procmail/procmail_3.22-27_amd64.deb">procmail</a></td>
               <td>3.22-27</td>
               <td>Versatile e-mail processor</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/procps/procps_4.0.2-3_amd64.deb">procps</a></td>
               <td>2:4.0.2-3</td>
               <td>/proc file system utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/psmisc/psmisc_23.6-1_amd64.deb">psmisc</a></td>
               <td>23.6-1</td>
               <td>utilities that use the proc file system</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/pulseaudio_16.1+dfsg1-2+b1_amd64.deb">pulseaudio</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio sound server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/pulseaudio-module-bluetooth_16.1+dfsg1-2+b1_amd64.deb">pulseaudio-module-bluetooth</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>Bluetooth module for PulseAudio sound server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/pulseaudio-module-gsettings_16.1+dfsg1-2+b1_amd64.deb">pulseaudio-module-gsettings</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>GSettings module for PulseAudio sound server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/pulseaudio-utils_16.1+dfsg1-2+b1_amd64.deb">pulseaudio-utils</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>Command line tools for the PulseAudio sound server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-apt/python-apt-common_2.6.0_all.deb">python-apt-common</a></td>
               <td>2.6.0</td>
               <td>Python interface to libapt-pkg (locales)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-babel/python-babel-localedata_2.10.3-1_all.deb">python-babel-localedata</a></td>
               <td>2.10.3-1</td>
               <td>tools for internationalizing Python applications - locale data files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/python3_3.11.2-1+b1_amd64.deb">python3</a></td>
               <td>3.11.2-1+b1</td>
               <td>interactive high-level object-oriented language (default python3 version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-anyio/python3-anyio_3.6.2-1_all.deb">python3-anyio</a></td>
               <td>3.6.2-1</td>
               <td>Asynchronous compatibility layer (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/apparmor/python3-apparmor_3.0.8-3_all.deb">python3-apparmor</a></td>
               <td>3.0.8-3</td>
               <td>AppArmor Python3 utility library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-apt/python3-apt_2.6.0_amd64.deb">python3-apt</a></td>
               <td>2.6.0</td>
               <td>Python 3 interface to libapt-pkg</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-asgiref/python3-asgiref_3.6.0-1_all.deb">python3-asgiref</a></td>
               <td>3.6.0-1</td>
               <td>ASGI in-memory channel layer (Python3 version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-attrs/python3-attr_22.2.0-1_all.deb">python3-attr</a></td>
               <td>22.2.0-1</td>
               <td>Attributes without boilerplate (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-babel/python3-babel_2.10.3-1_all.deb">python3-babel</a></td>
               <td>2.10.3-1</td>
               <td>tools for internationalizing Python applications - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bidict/python3-bidict_0.22.1-1_all.deb">python3-bidict</a></td>
               <td>0.22.1-1</td>
               <td>Bidirectional map data structures and related functionality</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/blinker/python3-blinker_1.5-1_all.deb">python3-blinker</a></td>
               <td>1.5-1</td>
               <td>Fast, simple object-to-object and broadcast signaling (Python3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/brltty/python3-brlapi_6.7-1~bpo12+1_amd64.deb">python3-brlapi</a></td>
               <td>6.7-1~bpo12+1</td>
               <td>Braille display access via BRLTTY - Python3 bindings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/brotli/python3-brotli_1.0.9-2+b6_amd64.deb">python3-brotli</a></td>
               <td>1.0.9-2+b6</td>
               <td>lossless compression algorithm and format (Python 3 version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycairo/python3-cairo_1.20.1-5+b1_amd64.deb">python3-cairo</a></td>
               <td>1.20.1-5+b1</td>
               <td>Python3 bindings for the Cairo vector graphics library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-certifi/python3-certifi_2022.9.24-1_all.deb">python3-certifi</a></td>
               <td>2022.9.24-1</td>
               <td>root certificates for validating SSL certs and verifying TLS hosts (python3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-cffi/python3-cffi-backend_1.15.1-5+b1_amd64.deb">python3-cffi-backend</a></td>
               <td>1.15.1-5+b1</td>
               <td>Foreign Function Interface for Python 3 calling C code - runtime</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/chardet/python3-chardet_5.1.0+dfsg-2_all.deb">python3-chardet</a></td>
               <td>5.1.0+dfsg-2</td>
               <td>Universal Character Encoding Detector (Python3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-charset-normalizer/python3-charset-normalizer_3.0.1-2_all.deb">python3-charset-normalizer</a></td>
               <td>3.0.1-2</td>
               <td>charset, encoding and language detection (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-click/python3-click_8.1.3-2_all.deb">python3-click</a></td>
               <td>8.1.3-2</td>
               <td>Wrapper around optparse for command line utilities - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-colorama/python3-colorama_0.4.6-2_all.deb">python3-colorama</a></td>
               <td>0.4.6-2</td>
               <td>Cross-platform colored terminal text in Python - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
