--- a/bs/packages/45.html
+++ b/bs/packages/45.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/p/python-notify2/python3-notify2_0.3-5_all.deb">python3-notify2</a></td>
               <td>0.3-5</td>
               <td>desktop notifications API for Python 3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-oauthlib/python3-oauthlib_3.2.2-1_all.deb">python3-oauthlib</a></td>
               <td>3.2.2-1</td>
               <td>generic, spec-compliant implementation of OAuth for Python3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/olefile/python3-olefile_0.46-3_all.deb">python3-olefile</a></td>
               <td>0.46-3</td>
               <td>Python module to read/write MS OLE2 files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyopenssl/python3-openssl_23.0.0-1_all.deb">python3-openssl</a></td>
               <td>23.0.0-1</td>
               <td>Python 3 wrapper around the OpenSSL library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-packaging/python3-packaging_23.0-1_all.deb">python3-packaging</a></td>
               <td>23.0-1</td>
               <td>core utilities for python3 packages</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pillow/python3-pil_9.4.0-1.1+deb12u1_amd64.deb">python3-pil</a></td>
               <td>9.4.0-1.1+deb12u1</td>
               <td>Python Imaging Library (Python3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pip/python3-pip_23.0.1+dfsg-1_all.deb">python3-pip</a></td>
               <td>23.0.1+dfsg-1</td>
               <td>Python package installer</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pip/python3-pip-whl_23.0.1+dfsg-1_all.deb">python3-pip-whl</a></td>
               <td>23.0.1+dfsg-1</td>
               <td>Python package installer (pip wheel)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-pkg-resources_66.1.1-1+deb12u1_all.deb">python3-pkg-resources</a></td>
               <td>66.1.1-1+deb12u1</td>
               <td>Package Discovery and Resource Access using pkg_resources</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pypng/python3-png_0.20220715.0-1_all.deb">python3-png</a></td>
               <td>0.20220715.0-1</td>
               <td>Pure Python PNG Reader/Writer (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-psutil/python3-psutil_5.9.4-1+b1_amd64.deb">python3-psutil</a></td>
               <td>5.9.4-1+b1</td>
               <td>module providing convenience functions for managing processes (Python3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycryptodome/python3-pycryptodome_3.11.0+dfsg1-4_amd64.deb">python3-pycryptodome</a></td>
               <td>3.11.0+dfsg1-4</td>
               <td>cryptographic Python library (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycurl/python3-pycurl_7.45.2-3_amd64.deb">python3-pycurl</a></td>
               <td>7.45.2-3</td>
               <td>Python bindings to libcurl (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pygments/python3-pygments_2.14.0+dfsg-1_all.deb">python3-pygments</a></td>
               <td>2.14.0+dfsg-1</td>
               <td>syntax highlighting package written in Python 3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyinotify/python3-pyinotify_0.9.6-2_all.deb">python3-pyinotify</a></td>
               <td>0.9.6-2</td>
               <td>simple Linux inotify Python bindings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-pylibacl/python3-pylibacl_0.7.0-2_amd64.deb">python3-pylibacl</a></td>
               <td>0.7.0-2</td>
               <td>module for manipulating POSIX.1e ACLs (Python3 version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pynvim/python3-pynvim_0.4.2-2_all.deb">python3-pynvim</a></td>
               <td>0.4.2-2</td>
               <td>Python3 library for scripting Neovim processes through its msgpack-rpc API</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyparsing/python3-pyparsing_3.0.9-1_all.deb">python3-pyparsing</a></td>
               <td>3.0.9-1</td>
               <td>alternative to creating and executing simple grammars - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyqt5/python3-pyqt5_5.15.9+dfsg-1_amd64.deb">python3-pyqt5</a></td>
               <td>5.15.9+dfsg-1</td>
               <td>Python 3 bindings for Qt5</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyqt5-sip/python3-pyqt5.sip_12.11.1-1_amd64.deb">python3-pyqt5.sip</a></td>
               <td>12.11.1-1</td>
               <td>runtime module for Python extensions using SIP</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyrsistent/python3-pyrsistent_0.18.1-1+b3_amd64.deb">python3-pyrsistent</a></td>
               <td>0.18.1-1+b3</td>
               <td>persistent/functional/immutable data structures for Python</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtcore_5.15.8-2+b1_amd64.deb">python3-pyside2.qtcore</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 core module (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtgui_5.15.8-2+b1_amd64.deb">python3-pyside2.qtgui</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 Gui module (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtwidgets_5.15.8-2+b1_amd64.deb">python3-pyside2.qtwidgets</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 Widgets module (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pysimplesoap/python3-pysimplesoap_1.16.2-5_all.deb">python3-pysimplesoap</a></td>
               <td>1.16.2-5</td>
               <td>simple and lightweight SOAP Library (Python 3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-pyxattr/python3-pyxattr_0.8.1-1_amd64.deb">python3-pyxattr</a></td>
               <td>0.8.1-1</td>
               <td>module for manipulating filesystem extended attributes (Python3)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-qrcode/python3-qrcode_7.4.2-2_all.deb">python3-qrcode</a></td>
               <td>7.4.2-2</td>
               <td>QR Code image generator library - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/reportbug/python3-reportbug_12.0.0_all.deb">python3-reportbug</a></td>
               <td>12.0.0</td>
               <td>Python modules for interacting with bug tracking systems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/requests/python3-requests_2.28.1+dfsg-1_all.deb">python3-requests</a></td>
               <td>2.28.1+dfsg-1</td>
               <td>elegant and simple HTTP library for Python3, built for human beings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-requests-toolbelt/python3-requests-toolbelt_0.10.1-1_all.deb">python3-requests-toolbelt</a></td>
               <td>0.10.1-1</td>
               <td>Utility belt for advanced users of python3-requests</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-rfc3986/python3-rfc3986_1.5.0-2_all.deb">python3-rfc3986</a></td>
               <td>1.5.0-2</td>
               <td>validating URI references per RFC 3986 - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-rfc3987/python3-rfc3987_1.3.8-2_all.deb">python3-rfc3987</a></td>
               <td>1.3.8-2</td>
               <td>Parsing and validation of URIs (RFC 3986) and IRIs (RFC 3987)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/rich/python3-rich_13.3.1-1_all.deb">python3-rich</a></td>
               <td>13.3.1-1</td>
               <td>render rich text, tables, progress bars, syntax highlighting, markdown and more</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-setproctitle/python3-setproctitle_1.3.1-1+b2_amd64.deb">python3-setproctitle</a></td>
               <td>1.3.1-1+b2</td>
               <td>Setproctitle implementation for Python 3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-setuptools_66.1.1-1+deb12u1_all.deb">python3-setuptools</a></td>
               <td>66.1.1-1+deb12u1</td>
               <td>Python3 Distutils Enhancements</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-setuptools-whl_66.1.1-1+deb12u1_all.deb">python3-setuptools-whl</a></td>
               <td>66.1.1-1+deb12u1</td>
               <td>Python Distutils Enhancements (wheel package)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/simplejson/python3-simplejson_3.18.3-1_amd64.deb">python3-simplejson</a></td>
               <td>3.18.3-1</td>
               <td>simple, fast, extensible JSON encoder/decoder for Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/six/python3-six_1.16.0-4_all.deb">python3-six</a></td>
               <td>1.16.0-4</td>
               <td>Python 2 and 3 compatibility library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pysmbc/python3-smbc_1.0.23-2+b4_amd64.deb">python3-smbc</a></td>
               <td>1.0.23-2+b4</td>
               <td>Python 3 bindings for the Samba client library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-sniffio/python3-sniffio_1.2.0-1_all.deb">python3-sniffio</a></td>
               <td>1.2.0-1</td>
               <td>detect which async Python library is in use</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-socketio/python3-socketio_5.7.2-2_all.deb">python3-socketio</a></td>
               <td>5.7.2-2</td>
               <td>python3 implementation of the Socket.IO realtime client and server</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-socksipy/python3-socks_1.7.1+dfsg-1_all.deb">python3-socks</a></td>
               <td>1.7.1+dfsg-1</td>
               <td>Python 3 SOCKS client module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/software-properties/python3-software-properties_0.99.30-4.1~deb12u1_all.deb">python3-software-properties</a></td>
               <td>0.99.30-4.1~deb12u1</td>
               <td>manage the repositories that you install software from</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/speech-dispatcher/python3-speechd_0.12.0-3~bpo12+1_all.deb">python3-speechd</a></td>
               <td>0.12.0-3~bpo12+1</td>
               <td>Python interface to Speech Dispatcher</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-stem/python3-stem_1.8.1-2.1_all.deb">python3-stem</a></td>
               <td>1.8.1-2.1</td>
               <td>Tor control library for Python 3 series</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/samba/python3-talloc_2.4.2+samba4.21.5+dfsg-1~bpo12+1_amd64.deb">python3-talloc</a></td>
               <td>2:2.4.2+samba4.21.5+dfsg-1~bpo12+1</td>
               <td>hierarchical pool based memory allocator - Python3 bindings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/samba/python3-tdb_1.4.12+samba4.21.5+dfsg-1~bpo12+1_amd64.deb">python3-tdb</a></td>
               <td>2:1.4.12+samba4.21.5+dfsg-1~bpo12+1</td>
               <td>Python3 bindings for TDB</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/texttable/python3-texttable_1.6.7-1_all.deb">python3-texttable</a></td>
               <td>1.6.7-1</td>
               <td>Module for creating simple ASCII tables — python3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-tornado/python3-tornado_6.2.0-3+deb12u1_amd64.deb">python3-tornado</a></td>
               <td>6.2.0-3+deb12u1</td>
               <td>scalable, non-blocking web server and tools - Python 3 package</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-typing-extensions/python3-typing-extensions_4.4.0-1_all.deb">python3-typing-extensions</a></td>
               <td>4.4.0-1</td>
               <td>Backported and Experimental Type Hints for Python</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
