--- a/bs/packages/46.html
+++ b/bs/packages/46.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/p/python-tz/python3-tz_2022.7.1-4_all.deb">python3-tz</a></td>
               <td>2022.7.1-4</td>
               <td>Python3 version of the Olson timezone database</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/unidecode/python3-unidecode_1.3.6-1_all.deb">python3-unidecode</a></td>
               <td>1.3.6-1</td>
               <td>ASCII transliterations of Unicode text (Python 3 module)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-uritemplate/python3-uritemplate_4.1.1-2_all.deb">python3-uritemplate</a></td>
               <td>4.1.1-2</td>
               <td>implementation of RFC6570 - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-urllib3/python3-urllib3_1.26.12-1+deb12u1_all.deb">python3-urllib3</a></td>
               <td>1.26.12-1+deb12u1</td>
               <td>HTTP library with thread-safe connection pooling for Python3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/python3-venv_3.11.2-1+b1_amd64.deb">python3-venv</a></td>
               <td>3.11.2-1+b1</td>
               <td>venv module for python3 (default python3 version)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-wadllib/python3-wadllib_1.3.6-4_all.deb">python3-wadllib</a></td>
               <td>1.3.6-4</td>
               <td>Python 3 library for navigating WADL files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/w/webcolors/python3-webcolors_1.11.1-1_all.deb">python3-webcolors</a></td>
               <td>1.11.1-1</td>
               <td>python3 library of color names and value formats</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/w/websocket-client/python3-websocket_1.2.3-1_all.deb">python3-websocket</a></td>
               <td>1.2.3-1</td>
               <td>WebSocket client library - Python 3.x</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-websockets/python3-websockets_10.4-1_all.deb">python3-websockets</a></td>
               <td>10.4-1</td>
               <td>implementation of the WebSocket Protocol (RFC 6455)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-werkzeug/python3-werkzeug_2.2.2-3+deb12u1_all.deb">python3-werkzeug</a></td>
               <td>2.2.2-3+deb12u1</td>
               <td>collection of utilities for WSGI applications (Python 3.x)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/w/wheel/python3-wheel_0.38.4-2_all.deb">python3-wheel</a></td>
               <td>0.38.4-2</td>
               <td>built-package format for Python</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-xapp/python3-xapp_2.4.0-1_all.deb">python3-xapp</a></td>
               <td>2.4.0-1</td>
               <td>Python 3 XApp library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyxdg/python3-xdg_0.28-2_all.deb">python3-xdg</a></td>
               <td>0.28-2</td>
               <td>Python 3 library to access freedesktop.org standards</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyyaml/python3-yaml_6.0-3+b2_amd64.deb">python3-yaml</a></td>
               <td>6.0-3+b2</td>
               <td>YAML parser and emitter for Python3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/z/zope.event/python3-zope.event_4.4-3_all.deb">python3-zope.event</a></td>
               <td>4.4-3</td>
               <td>Very basic event publishing system</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zope.interface/python3-zope.interface_5.5.2-1+b1_amd64.deb">python3-zope.interface</a></td>
               <td>5.5.2-1+b1</td>
               <td>Interfaces for Python3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qttools-opensource-src/qdbus-qt5_5.15.8-2_amd64.deb">qdbus-qt5</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 D-Bus tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qemu/qemu-guest-agent_9.2.2+ds-1~bpo12+1_amd64.deb">qemu-guest-agent</a></td>
               <td>1:9.2.2+ds-1~bpo12+1</td>
               <td>Guest-side qemu-system agent</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gsettings-qt/qml-module-gsettings1.0_0.2-5_amd64.deb">qml-module-gsettings1.0</a></td>
               <td>0.2-5</td>
               <td>QML Bindings for GSettings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kactivities-kf5/qml-module-org-kde-activities_5.103.0-1_amd64.deb">qml-module-org-kde-activities</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE Frameworks</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez-qt/qml-module-org-kde-bluezqt_5.103.0-1_amd64.deb">qml-module-org-kde-bluezqt</a></td>
               <td>5.103.0-1</td>
               <td>QML wrapper for bluez</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-draganddrop_5.103.0-1_amd64.deb">qml-module-org-kde-draganddrop</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks - draganddrop</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kcm_5.103.0-1_amd64.deb">qml-module-org-kde-kcm</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE Frameworks - kcm</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcmutils/qml-module-org-kde-kcmutils_5.103.0-3_amd64.deb">qml-module-org-kde-kcmutils</a></td>
               <td>5.103.0-3</td>
               <td>Extra APIs to write KConfig modules</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kconfig_5.103.0-1_amd64.deb">qml-module-org-kde-kconfig</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE Frameworks - kconfig</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kcoreaddons_5.103.0-1_amd64.deb">qml-module-org-kde-kcoreaddons</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks - kcoreaddons</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kholidays/qml-module-org-kde-kholidays_5.103.0-1_amd64.deb">qml-module-org-kde-kholidays</a></td>
               <td>1:5.103.0-1</td>
               <td>holidays calculation library - qml files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kio_5.103.0-1_amd64.deb">qml-module-org-kde-kio</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE Frameworks - kio</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kirigami2/qml-module-org-kde-kirigami2_5.103.0-1_amd64.deb">qml-module-org-kde-kirigami2</a></td>
               <td>5.103.0-1</td>
               <td>set of QtQuick components targeted for mobile use</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kitemmodels/qml-module-org-kde-kitemmodels_5.103.0-1_amd64.deb">qml-module-org-kde-kitemmodels</a></td>
               <td>5.103.0-1</td>
               <td>additional item/view models for Qt Itemview (QML Bindings)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kquickcontrols_5.103.0-1_amd64.deb">qml-module-org-kde-kquickcontrols</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks - kquickcontrols</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kquickcontrolsaddons_5.103.0-1_amd64.deb">qml-module-org-kde-kquickcontrolsaddons</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE Frameworks - kquickcontrolsaddons</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/qml-module-org-kde-ksysguard_5.27.5-2_amd64.deb">qml-module-org-kde-ksysguard</a></td>
               <td>4:5.27.5-2</td>
               <td>KSysGuard QtDeclarative QML Support</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/qml-module-org-kde-kwindowsystem_5.103.0-1_amd64.deb">qml-module-org-kde-kwindowsystem</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks - kwindowsystem</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/qml-module-org-kde-newstuff_5.103.0-1_amd64.deb">qml-module-org-kde-newstuff</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/qml-module-org-kde-people_5.103.0-1_amd64.deb">qml-module-org-kde-people</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpipewire/qml-module-org-kde-pipewire_5.27.5-3_amd64.deb">qml-module-org-kde-pipewire</a></td>
               <td>5.27.5-3</td>
               <td>KDE's Pipewire libraries - QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/prison-kf5/qml-module-org-kde-prison_5.103.0-1_amd64.deb">qml-module-org-kde-prison</a></td>
               <td>5.103.0-1</td>
               <td>barcode API for Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/purpose/qml-module-org-kde-purpose_5.103.0-1_amd64.deb">qml-module-org-kde-purpose</a></td>
               <td>5.103.0-1</td>
               <td>abstraction to provide and leverage actions of a specific kind, qml bindings</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qqc2-desktop-style/qml-module-org-kde-qqc2desktopstyle_5.103.0-1_amd64.deb">qml-module-org-kde-qqc2desktopstyle</a></td>
               <td>5.103.0-1</td>
               <td>Qt Quick Controls 2: Desktop Style</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kquickcharts/qml-module-org-kde-quickcharts_5.103.0-1_amd64.deb">qml-module-org-kde-quickcharts</a></td>
               <td>5.103.0-1</td>
               <td>Quick Charts</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krunner/qml-module-org-kde-runnermodel_5.103.0-1_amd64.deb">qml-module-org-kde-runnermodel</a></td>
               <td>5.103.0-1</td>
               <td>Used to write plugins loaded at runtime called "Runners".</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/solid/qml-module-org-kde-solid_5.103.0-1_amd64.deb">qml-module-org-kde-solid</a></td>
               <td>5.103.0-1</td>
               <td>Qt library to query and control hardware plugin</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonnet/qml-module-org-kde-sonnet_5.103.0-1_amd64.deb">qml-module-org-kde-sonnet</a></td>
               <td>5.103.0-1</td>
               <td>spell checking library for Qt, plugins</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ksyntax-highlighting/qml-module-org-kde-syntaxhighlighting_5.103.0-3_amd64.deb">qml-module-org-kde-syntaxhighlighting</a></td>
               <td>5.103.0-3</td>
               <td>Syntax highlighting Engine (QML module)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kuserfeedback/qml-module-org-kde-userfeedback_1.2.0-2_amd64.deb">qml-module-org-kde-userfeedback</a></td>
               <td>1.2.0-2</td>
               <td>user feedback for applications - QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qt-labs-folderlistmodel_5.15.8+dfsg-3_amd64.deb">qml-module-qt-labs-folderlistmodel</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 folderlistmodel QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols2-opensource-src/qml-module-qt-labs-platform_5.15.8+dfsg-2_amd64.deb">qml-module-qt-labs-platform</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt 5 qt.labs.platform QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qt-labs-qmlmodels_5.15.8+dfsg-3_amd64.deb">qml-module-qt-labs-qmlmodels</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Qt.labs.qmlmodels QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qt-labs-settings_5.15.8+dfsg-3_amd64.deb">qml-module-qt-labs-settings</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 settings QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
