--- a/bs/packages/47.html
+++ b/bs/packages/47.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/q/qtgraphicaleffects-opensource-src/qml-module-qtgraphicaleffects_5.15.8-2_amd64.deb">qml-module-qtgraphicaleffects</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Graphical Effects module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/qml-module-qtmultimedia_5.15.8-2_amd64.deb">qml-module-qtmultimedia</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Multimedia QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtqml_5.15.8+dfsg-3_amd64.deb">qml-module-qtqml</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 QtQml QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtqml-models2_5.15.8+dfsg-3_amd64.deb">qml-module-qtqml-models2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Models2 QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols-opensource-src/qml-module-qtquick-controls_5.15.8-2_amd64.deb">qml-module-qtquick-controls</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Quick Controls QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols2-opensource-src/qml-module-qtquick-controls2_5.15.8+dfsg-2_amd64.deb">qml-module-qtquick-controls2</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt 5 Qt Quick Controls 2 QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols-opensource-src/qml-module-qtquick-dialogs_5.15.8-2_amd64.deb">qml-module-qtquick-dialogs</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Dialogs QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-layouts_5.15.8+dfsg-3_amd64.deb">qml-module-qtquick-layouts</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Quick Layouts QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-particles2_5.15.8+dfsg-3_amd64.deb">qml-module-qtquick-particles2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 particles 2 QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols-opensource-src/qml-module-qtquick-privatewidgets_5.15.8-2_amd64.deb">qml-module-qtquick-privatewidgets</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Private Widgets QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-shapes_5.15.8+dfsg-3_amd64.deb">qml-module-qtquick-shapes</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Qt Quick Shapes QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols2-opensource-src/qml-module-qtquick-templates2_5.15.8+dfsg-2_amd64.deb">qml-module-qtquick-templates2</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt 5 Qt Quick Templates 2 QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtvirtualkeyboard-opensource-src/qml-module-qtquick-virtualkeyboard_5.15.8+dfsg-2_amd64.deb">qml-module-qtquick-virtualkeyboard</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt virtual keyboard - QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-window2_5.15.8+dfsg-3_amd64.deb">qml-module-qtquick-window2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 window 2 QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick2_5.15.8+dfsg-3_amd64.deb">qml-module-qtquick2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Qt Quick 2 QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtwebkit-opensource-src/qml-module-qtwebkit_5.212.0~alpha4-30_amd64.deb">qml-module-qtwebkit</a></td>
               <td>5.212.0~alpha4-30</td>
               <td>Qt WebKit QML module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtimageformats-opensource-src/qt5-image-formats-plugins_5.15.8-2_amd64.deb">qt5-image-formats-plugins</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Image Formats module</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtchooser/qtchooser_66-2_amd64.deb">qtchooser</a></td>
               <td>66-2</td>
               <td>Wrapper to select between Qt development binary versions</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/q/qttranslations-opensource-src/qttranslations5-l10n_5.15.8-2_all.deb">qttranslations5-l10n</a></td>
               <td>5.15.8-2</td>
               <td>translations for Qt 5</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtwayland-opensource-src/qtwayland5_5.15.8-2_amd64.deb">qtwayland5</a></td>
               <td>5.15.8-2</td>
               <td>QtWayland platform plugin</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qucs-s/qucs-s_24.4.0-1_amd64.deb">qucs-s</a></td>
               <td>24.4.0-1</td>
               <td>Quite Universal Circuit Simulator with SPICE (Qucs-S)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/raspberrypi-archive-keyring/raspberrypi-archive-keyring_2021.1.1+rpt1_all.deb">raspberrypi-archive-keyring</a></td>
               <td>2021.1.1+rpt1</td>
               <td>GnuPG archive keys of the Raspberry Pi OS archive</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/raspbian-archive-keyring/raspbian-archive-keyring_20120528.2_all.deb">raspbian-archive-keyring</a></td>
               <td>20120528.2</td>
               <td>GnuPG archive keys of the raspbian archive</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/readline/readline-common_8.2-1.3_all.deb">readline-common</a></td>
               <td>8.2-1.3</td>
               <td>GNU readline and history libraries, common files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/reiser4progs/reiser4progs_1.2.2-1+b1_amd64.deb">reiser4progs</a></td>
               <td>1.2.2-1+b1</td>
               <td>administration utilities for the Reiser4 filesystem</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/reiserfsprogs/reiserfsprogs_3.6.27-8~bpo12+1_amd64.deb">reiserfsprogs</a></td>
               <td>1:3.6.27-8~bpo12+1</td>
               <td>User-level tools for ReiserFS filesystems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/rename/rename_2.01-1_all.deb">rename</a></td>
               <td>2.01-1</td>
               <td>Perl extension for renaming multiple files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/reportbug/reportbug_12.0.0_all.deb">reportbug</a></td>
               <td>12.0.0</td>
               <td>reports bugs in the Debian distribution</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rng-tools5/rng-tools5_5-4.1_amd64.deb">rng-tools5</a></td>
               <td>5-4.1</td>
               <td>Daemon to use a Hardware TRNG</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rpcsvc-proto/rpcsvc-proto_1.4.3-1_amd64.deb">rpcsvc-proto</a></td>
               <td>1.4.3-1</td>
               <td>RPC protocol compiler and definitions</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rsync/rsync_3.2.7-1+deb12u2_amd64.deb">rsync</a></td>
               <td>3.2.7-1+deb12u2</td>
               <td>fast, versatile, remote (and local) file-copying tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rtkit/rtkit_0.13-5_amd64.deb">rtkit</a></td>
               <td>0.13-5</td>
               <td>Realtime Policy and Watchdog Daemon</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rtmpdump/rtmpdump_2.4+20151223.gitfa8646d.1-2+b2_amd64.deb">rtmpdump</a></td>
               <td>2.4+20151223.gitfa8646d.1-2+b2</td>
               <td>small dumper for media content streamed over the RTMP protocol</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dh-runit/runit-helper_2.15.2_all.deb">runit-helper</a></td>
               <td>2.15.2</td>
               <td>dh-runit implementation detail</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/screen/screen_4.9.0-4_amd64.deb">screen</a></td>
               <td>4.9.0-4</td>
               <td>terminal multiplexer with VT100/ANSI terminal emulation</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sddm/sddm_0.19.0-5+openbosniana1_amd64.deb">sddm</a></td>
               <td>0.19.0-5+openbosniana1</td>
               <td>modern display manager for X11</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/sddm-theme-breeze_5.27.7_amd64.deb">sddm-theme-breeze</a></td>
               <td>4:5.27.7</td>
               <td>Modified Breeze SDDM theme</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/sddm-theme-debian-breeze_5.27.5-2+openbosniana2_amd64.deb">sddm-theme-debian-breeze</a></td>
               <td>4:5.27.5-2+openbosniana2</td>
               <td>Debian Breeze SDDM theme</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sed/sed_4.9-1_amd64.deb">sed</a></td>
               <td>4.9-1</td>
               <td>GNU stream editor for filtering/transforming text</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sensible-utils/sensible-utils_0.0.17+nmu1_all.deb">sensible-utils</a></td>
               <td>0.0.17+nmu1</td>
               <td>Utilities for sensible alternative selection</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sgml-base/sgml-base_1.31_all.deb">sgml-base</a></td>
               <td>1.31</td>
               <td>SGML infrastructure and SGML catalog file support</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sgml-data/sgml-data_2.0.11+nmu1_all.deb">sgml-data</a></td>
               <td>2.0.11+nmu1</td>
               <td>common SGML and XML data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shared-mime-info/shared-mime-info_2.2-1_amd64.deb">shared-mime-info</a></td>
               <td>2.2-1</td>
               <td>FreeDesktop.org shared MIME database and spec</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shim-signed/shim-signed_1.44~1+deb12u1+15.8-1~deb12u1_amd64.deb">shim-signed</a></td>
               <td>1.44~1+deb12u1+15.8-1~deb12u1</td>
               <td>Secure Boot chain-loading bootloader (Microsoft-signed binary)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/shim-signed/shim-signed-common_1.44~1+deb12u1+15.8-1~deb12u1_all.deb">shim-signed-common</a></td>
               <td>1.44~1+deb12u1+15.8-1~deb12u1</td>
               <td>Secure Boot chain-loading bootloader (common helper scripts)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/signon-plugin-oauth2/signon-plugin-oauth2_0.25-2_amd64.deb">signon-plugin-oauth2</a></td>
               <td>0.25-2</td>
               <td>OAuth 1.0/2.0 plugin for the Accounts SignOn daemon</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sirikali/sirikali_1.5.0-2_amd64.deb">sirikali</a></td>
               <td>1.5.0-2</td>
               <td>Manage user encrypted volumes</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/slirp4netns/slirp4netns_1.2.0-1_amd64.deb">slirp4netns</a></td>
               <td>1.2.0-1</td>
               <td>User-mode networking for unprivileged network namespaces</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/smartmontools/smartmontools_7.4-2~bpo12+1_amd64.deb">smartmontools</a></td>
               <td>7.4-2~bpo12+1</td>
               <td>control and monitor storage systems using S.M.A.R.T.</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/socat/socat_1.8.0.0-4~bpo12+1_amd64.deb">socat</a></td>
               <td>1.8.0.0-4~bpo12+1</td>
               <td>multipurpose relay for bidirectional data transfer</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
