--- a/bs/packages/48.html
+++ b/bs/packages/48.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/s/software-properties/software-properties-common_0.99.30-4.1~deb12u1_all.deb">software-properties-common</a></td>
               <td>0.99.30-4.1~deb12u1</td>
               <td>manage the repositories that you install software from (common)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/software-properties/software-properties-qt_0.99.30-4.1~deb12u1_all.deb">software-properties-qt</a></td>
               <td>0.99.30-4.1~deb12u1</td>
               <td>manage the repositories that you install software from (Qt)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonnet/sonnet-plugins_5.103.0-1_amd64.deb">sonnet-plugins</a></td>
               <td>5.103.0-1</td>
               <td>spell checking library for Qt, plugins</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sound-theme-freedesktop/sound-theme-freedesktop_0.8-2_all.deb">sound-theme-freedesktop</a></td>
               <td>0.8-2</td>
               <td>freedesktop.org sound theme</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/spice-vdagent/spice-vdagent_0.22.1-3+b2_amd64.deb">spice-vdagent</a></td>
               <td>0.22.1-3+b2</td>
               <td>Spice agent for Linux</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/squashfs-tools/squashfs-tools_4.5.1-1_amd64.deb">squashfs-tools</a></td>
               <td>1:4.5.1-1</td>
               <td>Tool to create and append to squashfs filesystems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sshfs-fuse/sshfs_3.7.3-1.1_amd64.deb">sshfs</a></td>
               <td>3.7.3-1.1</td>
               <td>filesystem client based on SSH File Transfer Protocol</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/ssl-cert/ssl-cert_1.1.2_all.deb">ssl-cert</a></td>
               <td>1.1.2</td>
               <td>simple debconf wrapper for OpenSSL</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sudo/sudo_1.9.13p3-1+deb12u1_amd64.deb">sudo</a></td>
               <td>1.9.13p3-1+deb12u1</td>
               <td>Provide limited super user privileges to specific users</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sweeper/sweeper_22.12.3-1_amd64.deb">sweeper</a></td>
               <td>4:22.12.3-1</td>
               <td>history and temporary file cleaner</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/syslinux/syslinux-common_6.04~git20190206.bf6db5b4+dfsg1-3_all.deb">syslinux-common</a></td>
               <td>3:6.04~git20190206.bf6db5b4+dfsg1-3</td>
               <td>collection of bootloaders (common)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd_254.22-1~bpo12+1_amd64.deb">systemd</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>system and service manager</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd-coredump_254.22-1~bpo12+1_amd64.deb">systemd-coredump</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>tools for storing and retrieving coredumps</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/systemd/systemd-dev_254.22-1~bpo12+1_all.deb">systemd-dev</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>systemd development files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd-sysv_254.22-1~bpo12+1_amd64.deb">systemd-sysv</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>system and service manager - SysV compatibility symlinks</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd-timesyncd_254.22-1~bpo12+1_amd64.deb">systemd-timesyncd</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>minimalistic service to synchronize local time with NTP servers</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemsettings/systemsettings_5.27.5-2_amd64.deb">systemsettings</a></td>
               <td>4:5.27.5-2</td>
               <td>System Settings interface</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sysvinit/sysvinit-utils_3.08-3~bpo12+2_amd64.deb">sysvinit-utils</a></td>
               <td>3.08-3~bpo12+2</td>
               <td>System-V-like utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/t1utils/t1utils_1.41-4_amd64.deb">t1utils</a></td>
               <td>1.41-4</td>
               <td>Collection of simple Type 1 font manipulation programs</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tar/tar_1.34+dfsg-1.2+deb12u1_amd64.deb">tar</a></td>
               <td>1.34+dfsg-1.2+deb12u1</td>
               <td>GNU version of the tar archiving utility</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-bosnian-kde-desktop_3.73+openbosniana5_all.deb">task-bosnian-kde-desktop</a></td>
               <td>3.73+openbosniana5</td>
               <td>Bosnian KDE Plasma desktop</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-desktop_3.73+openbosniana5_all.deb">task-desktop</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>Debian desktop environment</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-kde-desktop_3.73+openbosniana5_all.deb">task-kde-desktop</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>KDE Plasma</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-lxqt-desktop_3.73_all.deb">task-lxqt-desktop</a></td>
               <td>3.73</td>
               <td>LXQt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/tasksel_3.73+openbosniana5_all.deb">tasksel</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>tool for selecting tasks for installation on Debian systems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/tasksel-data_3.73+openbosniana5_all.deb">tasksel-data</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>official tasks used for installation of Debian systems</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-terser/terser_5.16.5-2_all.deb">terser</a></td>
               <td>5.16.5-2</td>
               <td>parser/mangler/compressor for ES6+ - CLI tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/thin-provisioning-tools/thin-provisioning-tools_0.9.0-2_amd64.deb">thin-provisioning-tools</a></td>
               <td>0.9.0-2</td>
               <td>Tools for handling thinly provisioned device-mapper meta-data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/timgm6mb-soundfont/timgm6mb-soundfont_1.3-5_all.deb">timgm6mb-soundfont</a></td>
               <td>1.3-5</td>
               <td>TimGM6mb SoundFont from MuseScore 1.3</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/toilet/toilet_0.3-1.4_amd64.deb">toilet</a></td>
               <td>0.3-1.4</td>
               <td>display large colourful characters in text mode</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/toilet/toilet-fonts_0.3-1.4_all.deb">toilet-fonts</a></td>
               <td>0.3-1.4</td>
               <td>collection of TOIlet fonts</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tor/tor_0.4.8.14-1~bpo12+1_amd64.deb">tor</a></td>
               <td>0.4.8.14-1~bpo12+1</td>
               <td>anonymizing overlay network for TCP</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tor/tor-geoipdb_0.4.8.14-1~bpo12+1_all.deb">tor-geoipdb</a></td>
               <td>0.4.8.14-1~bpo12+1</td>
               <td>GeoIP database for Tor</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/torsocks/torsocks_2.4.0-1_amd64.deb">torsocks</a></td>
               <td>2.4.0-1</td>
               <td>use SOCKS-friendly applications with Tor</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tpm-udev/tpm-udev_0.6_all.deb">tpm-udev</a></td>
               <td>0.6</td>
               <td>udev rules for TPM modules</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/traceroute/traceroute_2.1.2-1_amd64.deb">traceroute</a></td>
               <td>1:2.1.2-1</td>
               <td>Traces the route taken by packets over an IPv4/IPv6 network</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tree/tree_2.1.0-1_amd64.deb">tree</a></td>
               <td>2.1.0-1</td>
               <td>displays an indented directory tree, in color</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tzdata/tzdata_2025b-0+deb12u1_all.deb">tzdata</a></td>
               <td>2025b-0+deb12u1</td>
               <td>time zone and daylight-saving time data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ucf/ucf_3.0043+nmu1+deb12u1_all.deb">ucf</a></td>
               <td>3.0043+nmu1+deb12u1</td>
               <td>Update Configuration File(s): preserve user changes to config files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/udev_254.22-1~bpo12+1_amd64.deb">udev</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>/dev/ and hotplug management daemon</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udftools/udftools_2.3-1_amd64.deb">udftools</a></td>
               <td>2.3-1</td>
               <td>tools for UDF filesystems and DVD/CD-R(W) drives</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udisks2/udisks2_2.9.4-4_amd64.deb">udisks2</a></td>
               <td>2.9.4-4</td>
               <td>D-Bus service to access and manipulate storage devices</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ufw/ufw_0.36.2-1_all.deb">ufw</a></td>
               <td>0.36.2-1</td>
               <td>program for managing a Netfilter firewall</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shadow/uidmap_4.13+dfsg1-1+b1_amd64.deb">uidmap</a></td>
               <td>1:4.13+dfsg1-1+b1</td>
               <td>programs to help use subuids</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unar/unar_1.10.7+ds1+really1.10.1-2+b2_amd64.deb">unar</a></td>
               <td>1.10.7+ds1+really1.10.1-2+b2</td>
               <td>Unarchiver for a variety of file formats</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unzip/unzip_6.0-28_amd64.deb">unzip</a></td>
               <td>6.0-28</td>
               <td>De-archiver for .zip files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/update-inetd/update-inetd_4.53_all.deb">update-inetd</a></td>
               <td>4.53</td>
               <td>inetd configuration file updater</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/upower/upower_0.99.20-2_amd64.deb">upower</a></td>
               <td>0.99.20-2</td>
               <td>abstraction for power management</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usb-modeswitch/usb-modeswitch_2.6.1-3+b1_amd64.deb">usb-modeswitch</a></td>
               <td>2.6.1-3+b1</td>
               <td>mode switching tool for controlling "flip flop" USB devices</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/usb-modeswitch-data/usb-modeswitch-data_20191128-5_all.deb">usb-modeswitch-data</a></td>
               <td>20191128-5</td>
               <td>mode switching data for usb-modeswitch</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
