--- a/bs/packages/49.html
+++ b/bs/packages/49.html
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="/bs/"></a>
     </div>
       <button class="btn-sakriveni">
         <a href="/" class="text-white">
@@ -224,350 +224,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/u/usb.ids/usb.ids_2024.07.04-0+deb12u1_all.deb">usb.ids</a></td>
               <td>2024.07.04-0+deb12u1</td>
               <td>USB ID Repository</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usbmuxd/usbmuxd_1.1.1-2_amd64.deb">usbmuxd</a></td>
               <td>1.1.1-2</td>
               <td>USB multiplexor daemon for iPhone and iPod Touch devices</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usbutils/usbutils_014-1+deb12u1_amd64.deb">usbutils</a></td>
               <td>1:014-1+deb12u1</td>
               <td>Linux USB utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/user-setup/user-setup_1.95_all.deb">user-setup</a></td>
               <td>1.95</td>
               <td>Set up initial user and password</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/usrmerge/usr-is-merged_37~deb12u1_all.deb">usr-is-merged</a></td>
               <td>37~deb12u1</td>
               <td>Transitional package to assert a merged-/usr system</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/util-linux_2.38.1-5+deb12u3_amd64.deb">util-linux</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>miscellaneous system utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/util-linux-extra_2.38.1-5+deb12u3_amd64.deb">util-linux-extra</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>interactive login tools</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/uuid-runtime_2.38.1-5+deb12u3_amd64.deb">uuid-runtime</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>runtime components for the Universally Unique ID library</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/va-driver-all_2.17.0-1_amd64.deb">va-driver-all</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API -- driver metapackage</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvdpau/vdpau-driver-all_1.5-2_amd64.deb">vdpau-driver-all</a></td>
               <td>1.5-2</td>
               <td>Video Decode and Presentation API for Unix (driver metapackage)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/v/vim/vim-common_9.0.1378-2+deb12u2_all.deb">vim-common</a></td>
               <td>2:9.0.1378-2+deb12u2</td>
               <td>Vi IMproved - Common files</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vim/vim-tiny_9.0.1378-2+deb12u2_amd64.deb">vim-tiny</a></td>
               <td>2:9.0.1378-2+deb12u2</td>
               <td>Vi IMproved - enhanced vi editor - compact version</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/scowl/wamerican_2020.12.07-2_all.deb">wamerican</a></td>
               <td>2020.12.07-2</td>
               <td>American English dictionary words for /usr/share/dict</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/form-history-control/webext-form-history-control_2.5.1.0-1_all.deb">webext-form-history-control</a></td>
               <td>2.5.1.0-1</td>
               <td>extension to manage form history</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/foxyproxy-firefox-extension/webext-foxyproxy_7.5.1+dfsg-3_all.deb">webext-foxyproxy</a></td>
               <td>7.5.1+dfsg-3</td>
               <td>Advanced proxy management for Firefox</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ublock-origin/webext-ublock-origin_1.42.0+dfsg-1~deb11u1_all.deb">webext-ublock-origin</a></td>
               <td>1.42.0+dfsg-1~deb11u1</td>
               <td>transitional package</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ublock-origin/webext-ublock-origin-chromium_1.54.0+dfsg-1openbosniana1_all.deb">webext-ublock-origin-chromium</a></td>
               <td>1.54.0+dfsg-1openbosniana1</td>
               <td>lightweight and efficient ads, malware, trackers blocker (Chromium)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ublock-origin/webext-ublock-origin-firefox_1.54.0+dfsg-1openbosniana1_all.deb">webext-ublock-origin-firefox</a></td>
               <td>1.54.0+dfsg-1openbosniana1</td>
               <td>lightweight and efficient ads, malware, trackers blocker (Firefox)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-webpack/webpack_5.75.0+dfsg+~cs17.16.14-1+deb12u1_all.deb">webpack</a></td>
               <td>5.75.0+dfsg+~cs17.16.14-1+deb12u1</td>
               <td>Packs CommonJs/AMD modules for the browser</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/wget/wget_1.21.3-1+deb12u1_amd64.deb">wget</a></td>
               <td>1.21.3-1+deb12u1</td>
               <td>retrieves files from the web</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/whois/whois_5.5.17_amd64.deb">whois</a></td>
               <td>5.5.17</td>
               <td>intelligent WHOIS client</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/w/wireless-regdb/wireless-regdb_2024.05.08-1_all.deb">wireless-regdb</a></td>
               <td>2024.05.08-1</td>
               <td>wireless regulatory database for Linux</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/wireless-tools/wireless-tools_30~pre9-14_amd64.deb">wireless-tools</a></td>
               <td>30~pre9-14</td>
               <td>Tools for manipulating Linux Wireless Extensions</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/wpa/wpasupplicant_2.10-12+deb12u2_amd64.deb">wpasupplicant</a></td>
               <td>2:2.10-12+deb12u2</td>
               <td>client support for WPA and WPA2 (IEEE 802.11i)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/x11-apps/x11-apps_7.7+9_amd64.deb">x11-apps</a></td>
               <td>7.7+9</td>
               <td>X applications</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg/x11-common_7.7+23_all.deb">x11-common</a></td>
               <td>1:7.7+23</td>
               <td>X Window System (X.Org) infrastructure</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/x11-session-utils/x11-session-utils_7.7+5_amd64.deb">x11-session-utils</a></td>
               <td>7.7+5</td>
               <td>X session utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/x11-utils/x11-utils_7.7+5_amd64.deb">x11-utils</a></td>
               <td>7.7+5</td>
               <td>X11 utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/x11-xkb-utils/x11-xkb-utils_7.7+7_amd64.deb">x11-xkb-utils</a></td>
               <td>7.7+7</td>
               <td>X11 XKB utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/x11-xserver-utils/x11-xserver-utils_7.7+9+b1_amd64.deb">x11-xserver-utils</a></td>
               <td>7.7+9+b1</td>
               <td>X server utilities</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xauth/xauth_1.1.2-1_amd64.deb">xauth</a></td>
               <td>1:1.1.2-1</td>
               <td>X authentication utility</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xbitmaps/xbitmaps_1.1.1-2.2_all.deb">xbitmaps</a></td>
               <td>1.1.1-2.2</td>
               <td>Base X bitmaps</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcvt/xcvt_0.1.2-1_amd64.deb">xcvt</a></td>
               <td>0.1.2-1</td>
               <td>VESA CVT standard timing modelines generator</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-dbus-proxy/xdg-dbus-proxy_0.1.4-3_amd64.deb">xdg-dbus-proxy</a></td>
               <td>0.1.4-3</td>
               <td>filtering D-Bus proxy</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-desktop-portal/xdg-desktop-portal_1.16.0-2_amd64.deb">xdg-desktop-portal</a></td>
               <td>1.16.0-2</td>
               <td>desktop integration portal for Flatpak and Snap</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-desktop-portal-gtk/xdg-desktop-portal-gtk_1.14.1-1_amd64.deb">xdg-desktop-portal-gtk</a></td>
               <td>1.14.1-1</td>
               <td>GTK+/GNOME portal backend for xdg-desktop-portal</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-desktop-portal-kde/xdg-desktop-portal-kde_5.27.5-2_amd64.deb">xdg-desktop-portal-kde</a></td>
               <td>5.27.5-2</td>
               <td>backend implementation for xdg-desktop-portal using Qt</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-user-dirs/xdg-user-dirs_0.18-1_amd64.deb">xdg-user-dirs</a></td>
               <td>0.18-1</td>
               <td>tool to manage well known user directories</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-user-dirs-gtk/xdg-user-dirs-gtk_0.11-1_amd64.deb">xdg-user-dirs-gtk</a></td>
               <td>0.11-1</td>
               <td>tool to manage well known user directories (Gtk extension)</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xdg-utils/xdg-utils_1.1.3-4.1_all.deb">xdg-utils</a></td>
               <td>1.1.3-4.1</td>
               <td>desktop integration utilities from freedesktop.org</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xfonts-100dpi/xfonts-100dpi_1.0.5_all.deb">xfonts-100dpi</a></td>
               <td>1:1.0.5</td>
               <td>100 dpi fonts for X</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xfonts-75dpi/xfonts-75dpi_1.0.5_all.deb">xfonts-75dpi</a></td>
               <td>1:1.0.5</td>
               <td>75 dpi fonts for X</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xfonts-base/xfonts-base_1.0.5+nmu1_all.deb">xfonts-base</a></td>
               <td>1:1.0.5+nmu1</td>
               <td>standard fonts for X</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xfonts-encodings/xfonts-encodings_1.0.4-2.2_all.deb">xfonts-encodings</a></td>
               <td>1:1.0.4-2.2</td>
               <td>Encodings for X.Org fonts</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xfonts-scalable/xfonts-scalable_1.0.3-1.3_all.deb">xfonts-scalable</a></td>
               <td>1:1.0.3-1.3</td>
               <td>scalable fonts for X</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xfonts-utils/xfonts-utils_7.7+6_amd64.deb">xfonts-utils</a></td>
               <td>1:7.7+6</td>
               <td>X Window System font utility programs</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xfsdump/xfsdump_3.1.11-0.1_amd64.deb">xfsdump</a></td>
               <td>3.1.11-0.1</td>
               <td>Administrative utilities for the XFS filesystem</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xfsprogs/xfsprogs_6.1.0-1_amd64.deb">xfsprogs</a></td>
               <td>6.1.0-1</td>
               <td>Utilities for managing the XFS filesystem</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xinit/xinit_1.4.0-1_amd64.deb">xinit</a></td>
               <td>1.4.0-1</td>
               <td>X server initialisation tool</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xkeyboard-config/xkb-data_2.35.1-1_all.deb">xkb-data</a></td>
               <td>2.35.1-1</td>
               <td>X Keyboard Extension (XKB) configuration data</td>
-              <td>2025-05-15 11:03:18</td>
+              <td>2025-05-15 11:33:21</td>
             </tr>
 
         </tbody>
